--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -351,7 +351,7 @@
     "item.kubejs.naga_scale": "娜迦鳞片",
     "item.kubejs.minotaur_muscle": "牛头人肌肉",
     "item.kubejs.questing_ram_answer": "羊的谜底",
-    "item.kubejs.cloud_brocade": "云尖锥",
+    "item.kubejs.cloud_pyramid": "纵云棱锥",
     "item.kubejs.creeper_appendix": "苦力怕阑尾",
     "block.irons_spellbooks.blood_cauldron": "盛血的炼药锅",
     "item.irons_spellbooks.eldritch_manuscript": "巫术学派手稿",
@@ -1628,15 +1628,15 @@
     "kubejs.tooltips.dragon_blood_heart.2": "在龙化状态下，龙类器官会给予你减伤，在减伤溢出时会将伤害转换成额外生命",
     "kubejs.tooltips.dragon_blood_heart.3": "神经效率影响龙化状态的持续时间，龙类器官种类影响龙化效果",
     "kubejs.tooltips.dragon_blood_heart.4": "额外生命值最多为生命值上限*3",
-    "kubejs.tooltips.etched_paper.1":"并非厕纸",
+    "kubejs.tooltips.etched_paper.1":"§7积§d咒§7难§b返",
     "kubejs.tooltips.etched_paper.2":"激活后根据胸腔内每格物品的附魔提供增益",
     "kubejs.tooltips.etched_paper.3":"每级非诅咒附魔§a提高§7%d法术强度",
     "kubejs.tooltips.etched_paper.4":"每级诅咒附魔§c降低§7%d法术强度，但§a提高§7%d法力回复",
-    "kubejs.tooltips.etched_paper.5":"至少有5种附魔的每格额外提供%d冷却缩减和%d飘浮",
-    "kubejs.tooltips.cloud_brocade.1":"羽化而蹬氙",
-    "kubejs.tooltips.cloud_brocade.2":"按下主动技能按键后获得短暂的缓降效果，",
-    "kubejs.tooltips.cloud_brocade.3":"并使你胸腔的漂浮属性在§6正常值§7与§6零§7之间切换",
-    "kubejs.tooltips.cloud_brocade.4":"切换为§6正常值§7时获得跳跃提升",
+    "kubejs.tooltips.etched_paper.5":"至少有5种附魔的每格额外提供%d冷却缩减和%d漂浮",
+    "kubejs.tooltips.cloud_pyramid.1":"羽化而蹬氙",
+    "kubejs.tooltips.cloud_pyramid.2":"按下主动技能按键后获得短暂的缓降效果，",
+    "kubejs.tooltips.cloud_pyramid.3":"并使你胸腔的漂浮属性在§6正常值§7与§6零§7之间切换",
+    "kubejs.tooltips.cloud_pyramid.4":"切换为§6正常值§7时获得跳跃提升",
     "kubejs.tooltips.chameleon_stomach.1":"变色？变温！",
     "kubejs.tooltips.chameleon_stomach.2":"手持岩浆块或冰块右键，提供一层升温或降温效果，持续60s",
     "kubejs.tooltips.chameleon_stomach.3":"每层升温或降温效果使你的世界温度提高或降低5℃，两种效果会互相抵消。",
