--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -32,6 +32,7 @@
     "item.kubejs.random_delivery_agreement": "随机交货协议",
     "item.kubejs.command_spell_book": "指令魔法书",
     "item.kubejs.candy_bag": "糖果袋",
+    "item.kubejs.colorful_candy": "彩虹糖果",
     "item.kubejs.greedy_stomach": "贪婪之胃",
     "item.kubejs.lucky_stomach": "幸运之胃",
     "item.kubejs.infinity_beats": "无尽节律",
@@ -474,7 +475,6 @@
     "effect.kubejs.cold_down": "降温",
     "effect.kubejs.overload": "过载",
     "effect.kubejs.ice": "冷静",
-    "travelerstitles.kubejs.lost_memory": "回忆之地",
     "kubejs.msg.tamagotchi.1": "Tamagotchi饿了！Tamagotchi想吃饭！",
     "kubejs.msg.tamagotchi.2": "Tamagotchi吃饱了！Tamagotchi很开心！",
     "kubejs.msg.treasure_detector_feather.1": "这个世界没有宝藏的气息",
@@ -489,8 +489,14 @@
     "kubejs.curios_of_god": "神赐魔装",
     "kubejs.wither_skeleton_gate_large": "[大型]凋灵骷髅传送门",
     "kubejs.phantom_gate_large": "[大型]幻翼传送门",
-    "kubejs.tetra.effect.functionalization.tooltip": "官能化有额外 §6%d * 2%%§f 的几率会额外触发一次玩家的§c唯一伤害标签器官§f特效。",
+    "kubejs.tetra.effect.functionalization.tooltip": "§f官能化在攻击时有 §6%d * 2%%§f 的几率会额外触发一次玩家的§c唯一伤害标签器官§f特效。",
     "kubejs.tetra.effect.functionalization.name": "官能化",
+    "tetra.stats.kubejs:functionalization": "官能化",
+    "tetra.stats.kubejs:functionalization.tooltip_short": "概率额外触发唯一伤害器官效果",
+    "kubejs.tetra.effect.silicosis.tooltip": "§f患有矽肺病的工具在主手会提高矿石肺 §6%d * 3%%§f 的触发几率；在效果等级超过§65级§f时，会额外使矿石肺不消耗资源点数。",
+    "kubejs.tetra.effect.silicosis.name": "矽肺病",
+    "tetra.stats.kubejs:silicosis": "矽肺病",
+    "tetra.stats.kubejs:silicosis.tooltip_short": "矿石肺效果增强",
     "tetra.material.savage_tooth": "野蛮之牙",
     "tetra.material.savage_tooth.prefix": "野蛮之牙",
     "tetra.material.alex_bone_serpent_tooth": "骨蟒尖齿",
@@ -1361,10 +1367,8 @@
     "kubejs.tooltips.snow_monster_core.1": "很可爱的小东西，不是吗？",
     "kubejs.tooltips.snow_monster_core.2": "你丢出的雪球将被转化为冰霜炸弹",
     "kubejs.tooltips.ore_lung.1": "吸入了过多灰尘，已经残破不堪",
-    "kubejs.tooltips.ore_lung.2": "每次挖掘石头后，便会积累1资源点数",
-    "kubejs.tooltips.ore_lung.3": "每次触发时，有3%概率消耗64点资源点数并给予矿物",
-    "kubejs.tooltips.ore_lung.4": "资源点积累效果唯一",
-    "kubejs.tooltips.ore_lung.5": "奖励受幸运影响",
+    "kubejs.tooltips.ore_lung.2": "每次挖掘石头时，有3%概率消耗64点资源点数并给予矿物",
+    "kubejs.tooltips.ore_lung.3": "奖励受幸运影响",
     "kubejs.tooltips.desire_of_midas.1": "激活后增加",
     "kubejs.tooltips.desire_of_midas.2": "100",
     "kubejs.tooltips.desire_of_midas.3": "资源点数上限",
@@ -1676,6 +1680,9 @@
     "kubejs.tooltips.questing_ram_answer.1": "谜题羊会告诉你，魔法的秘密",
     "kubejs.tooltips.questing_ram_answer.2": "根据体温，将近战攻击强化为超限法术：烈焰打击或冰锥，等级与伤害和体温有关",
     "kubejs.tooltips.questing_ram_answer.3": "攻击玩家时不生效",
+    "kubejs.tooltips.colorful_candy.1": "§7能携带玩家随机前往一个§d黯光版本§7引入的维度",
+    "kubejs.tooltips.colorful_candy.2": "§4不含返程！这会使你的发展路线发生巨大变化！",
+    "kubejs.tooltips.colorful_candy.3": "§8即便世界光芒黯淡，此处仍有一片虹彩照耀。",
     "tooltip.translation.spacecatasb.settitle.amethyst": "紫水晶",
     "tooltip.translation.spacecatasb.settitle.archevoker": "高位唤魔者",
     "tooltip.translation.spacecatasb.settitle.battlemage": "战斗法师",
@@ -1739,6 +1746,10 @@
     "tooltip.translation.spacecatasb.settitle.warped_wood": "诡异木",
     "tooltip.translation.spacecatasb.settitle.wood": "木",
     "kubejs.statusmsg.organ_sell.1": "通过器官售卖，你的银行账户余额增加了 %d 。",
+    "kubejs.statusmsg.colorful_candy_tp.1": "服用彩虹糖后，你被传送到了 %s 维度",
+    "twilightforest.twilight_forest": "暮色森林",
+    "minecraft.overworld": "主世界",
+    "travelerstitles.twilightforest.twilight_forest": "暮色森林",
     "kubejs.recipe.tip.1": "被净化的器官",
     "kubejs.tip.secret_hint": "对着秘密物品按下shift或许会有额外的发现！",
     "kubejs.tip.wares_useage": "使用交货台在村庄里快速提交交货协议",
