暮色森林套装效果制作
为暮色森林的套装添加了套装效果

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1745,6 +1745,14 @@
     "tooltip.translation.spacecatasb.settitle.wandering_magician": "流浪法师",
     "tooltip.translation.spacecatasb.settitle.warped_wood": "诡异木",
     "tooltip.translation.spacecatasb.settitle.wood": "木",
+    "tooltip.translation.spacecatasb.settitle.naga": "娜迦",
+    "tooltip.translation.spacecatasb.settitle.ironwood": "铁木",
+    "tooltip.translation.spacecatasb.settitle.fiery": "炽铁",
+    "tooltip.translation.spacecatasb.settitle.steeleaf": "钢叶",
+    "tooltip.translation.spacecatasb.settitle.knightmetal": "骑士",
+    "tooltip.translation.spacecatasb.settitle.yeti": "雪怪",
+    "tooltip.translation.spacecatasb.settitle.arctic": "极地",
+    "tooltip.translation.spacecatasb.settitle.knightphantom": "幻影",
     "kubejs.statusmsg.organ_sell.1": "通过器官售卖，你的银行账户余额增加了 %d 。",
     "kubejs.statusmsg.colorful_candy_tp.1": "服用彩虹糖后，你被传送到了 %s 维度",
     "twilightforest.twilight_forest": "暮色森林",
