添加器官和胸腔填充
* 添加装甲凝隙

* 填充剩余暮色小怪胸腔

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -338,6 +338,7 @@
     "item.kubejs.flame_muscle": "烈焰肌肉",
     "item.kubejs.flame_heart": "烈焰心脏",
     "item.kubejs.snow_monster_core": "雪怪核心",
+    "item.kubejs.armor_with_gaze": "装甲凝隙",
     "item.kubejs.etched_paper":"蚀咒纸",
     "item.kubejs.chameleon_stomach": "变色龙胃囊",
     "item.kubejs.flame_stomach": "烈焰之胃",
@@ -1641,6 +1642,9 @@
     "kubejs.tooltips.cloud_pyramid.2":"按下主动技能按键后获得短暂的缓降效果，",
     "kubejs.tooltips.cloud_pyramid.3":"并使你胸腔的漂浮属性在§6正常值§7与§6零§7之间切换",
     "kubejs.tooltips.cloud_pyramid.4":"切换为§6正常值§7时获得跳跃提升",
+    "kubejs.tooltips.armor_with_gaze.1":"专注！",
+    "kubejs.tooltips.armor_with_gaze.2":"注视的敌人对你的近战和弹射物伤害大幅降低",
+    "kubejs.tooltips.armor_with_gaze.3":"其他敌人对你的近战和弹射物伤害伤害提高",
     "kubejs.tooltips.chameleon_stomach.1":"变色？变温！",
     "kubejs.tooltips.chameleon_stomach.2":"手持岩浆块或冰块右键，提供一层升温或降温效果，持续60s",
     "kubejs.tooltips.chameleon_stomach.3":"每层升温或降温效果使你的世界温度提高或降低5℃，两种效果会互相抵消。",
