器官回收站配方添加
* 修改了砷铅铁饰件珠球的等级（其实不生效，需要额外做适配）

* 添加器官回收站配方和翻译键

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1924,5 +1924,6 @@
     "kubejs.tip.tip_127": "No-Flesh-Within-Chest在github上托管，如果有问题或想法可以去提issue",
     "kubejs.tip.tip_128": "不想动脑子？那就动手吧，手摇曲柄助你将一切机械动力机器变成手动",
     "kubejs.tip.tip_129": "地狱的凋零堡垒虽然只能用下界合金镐破坏，但这关我动力钻头什么事",
-    "kubejs.tip.tip_130": "不处理血肉温床旁的恶性经脉，会有一些有趣的事情……"
+    "kubejs.tip.tip_130": "不处理血肉温床旁的恶性经脉，会有一些有趣的事情……",
+    "machine.kubejs.organ_recycler.name": "器官回收站"
 }
