平衡性调整3
过载和冷静效果调整

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1372,7 +1372,7 @@
     "kubejs.tooltips.flame_muscle.1": "烈焰给予我力量",
     "kubejs.tooltips.flame_muscle.2": "若体温为正，近战攻击时，降低一半的体温，附加等量伤害",
     "kubejs.tooltips.flame_heart.1": "他在火焰中跳动",
-    "kubejs.tooltips.flame_heart.2": "体温大于50时，根据体内烈焰器官数目，使玩家进入过载状态",
+    "kubejs.tooltips.flame_heart.2": "体温大于50℃时，根据体内烈焰器官数目，使玩家进入过载状态",
     "kubejs.tooltips.flame_heart.3": "过载状态下，根据体温提高受到和造成的伤害倍率，并提供大量基础数值",
     "kubejs.tooltips.snow_monster_core.1": "很可爱的小东西，不是吗？",
     "kubejs.tooltips.snow_monster_core.2": "你丢出的雪球将被转化为冰霜炸弹",
@@ -1662,7 +1662,7 @@
     "kubejs.tooltips.flame_spine.1":"燃烧的脊梁",
     "kubejs.tooltips.flame_spine.2":"若体温为正，用体温抵消伤害",
     "kubejs.tooltips.ice_heart.1": "冰心一出，游戏结束",
-    "kubejs.tooltips.ice_heart.2": "体温低于-50时，根据体内寒冰器官数目，为玩家附加冷静效果",
+    "kubejs.tooltips.ice_heart.2": "体温低于-50℃时，根据体内寒冰器官数目，为玩家附加冷静效果",
     "kubejs.tooltips.ice_heart.3": "冷静效果下，根据体温降低受到的伤害，小幅降低法强，但提供大幅冷却缩减和回蓝",
     "kubejs.tooltips.ice_lung.1": "吐出的每一个字都结着霜",
     "kubejs.tooltips.ice_lung.2": "提升冰系法术法强，体温越低，提升越多。",
