--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -338,7 +338,7 @@
     "item.kubejs.flame_muscle": "烈焰肌肉",
     "item.kubejs.flame_heart": "烈焰心脏",
     "item.kubejs.snow_monster_core": "雪怪核心",
-    "item.kubejs.armor_with_gaze": "装甲凝隙",
+    "item.kubejs.armor_with_gaze": "装甲睨隙",
     "item.kubejs.etched_paper":"蚀咒纸",
     "item.kubejs.chameleon_stomach": "变色龙胃囊",
     "item.kubejs.flame_stomach": "烈焰之胃",
@@ -1647,6 +1647,7 @@
     "kubejs.tooltips.etched_paper.3":"每级非诅咒附魔§a提高§7%d法术强度",
     "kubejs.tooltips.etched_paper.4":"每级诅咒附魔§c降低§7%d法术强度，但§a提高§7%d法力回复",
     "kubejs.tooltips.etched_paper.5":"至少有5种附魔的每格额外提供%d冷却缩减和%d漂浮",
+    "kubejs.tooltips.etched_paper.6":"§u若你贪得无厌..",
     "kubejs.tooltips.cloud_pyramid.1":"羽化而蹬氙",
     "kubejs.tooltips.cloud_pyramid.2":"按下主动技能按键后获得短暂的缓降效果，",
     "kubejs.tooltips.cloud_pyramid.3":"并使你胸腔的漂浮属性在§6正常值§7与§6零§7之间切换",
