--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1647,7 +1647,7 @@
     "kubejs.tooltips.etched_paper.3":"每级非诅咒附魔§a提高§7%d法术强度",
     "kubejs.tooltips.etched_paper.4":"每级诅咒附魔§c降低§7%d法术强度，但§a提高§7%d法力回复",
     "kubejs.tooltips.etched_paper.5":"至少有5种附魔的每格额外提供%d冷却缩减和%d漂浮",
-    "kubejs.tooltips.etched_paper.6":"§u若你贪得无厌..",
+    "kubejs.tooltips.etched_paper.6":"§5若你贪得无厌..",
     "kubejs.tooltips.cloud_pyramid.1":"羽化而蹬氙",
     "kubejs.tooltips.cloud_pyramid.2":"按下主动技能按键后获得短暂的缓降效果，",
     "kubejs.tooltips.cloud_pyramid.3":"并使你胸腔的漂浮属性在§6正常值§7与§6零§7之间切换",
