--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1908,7 +1908,7 @@
     "kubejs.tip.tip_109": "可以用捕捉笼把刷怪笼带回家，但是只会形成原版怪物",
     "kubejs.tip.tip_110": "tetra工具中手柄的打磨加成均为百分比加成",
     "kubejs.tip.tip_111": "地狱的凋零堡垒只能用原版下界合金镐子挖进去",
-    "kubejs.tip.tip_112": "铁链什么都能拴住，甚至是凋零风暴！！！",
+    "kubejs.tip.tip_112": "铁链什么都能拴住，甚至是九头蛇！！！",
     "kubejs.tip.tip_113": "巫妖最好晚上去牧师村庄，如果白天去或者待到白天，牧师会永久仇视你",
     "kubejs.tip.tip_114": "如果你实在找不到一些boss召唤物的交货协议，也许你也可以试试用仪式催化剂自行召唤它们……",
     "kubejs.tip.tip_115": "巫妖和亡灵生物一样在白天燃烧，所以小心你头盔耐久度",
@@ -1920,8 +1920,8 @@
     "kubejs.tip.tip_121": "训练人偶可以通过活塞挤压到一起，方便训练",
     "kubejs.tip.tip_122": "做奶油前记得把奶桶和4个玻璃瓶合成瓶装奶，否则做了4个只能拿出一个",
     "kubejs.tip.tip_123": "不要做机械动力的区块清空机，区块清空会上瘾的！！！",
-    "kubejs.tip.tip_124": "可以用下界之星加速凋零风暴的成长速度",
-    "kubejs.tip.tip_125": "凋零风暴自行生长需要6个小时，建议多准备点零食，用永恒之翼飞在凋零风暴头顶等待",
+    "kubejs.tip.tip_124": "黯光后续会添加各种各样的新维度",
+    "kubejs.tip.tip_125": "据说在未来的更新中还存在所谓的终局材料？",
     "kubejs.tip.tip_126": "奥术残骸很难挖，可以试试寻找虚拟矿脉",
     "kubejs.tip.tip_127": "No-Flesh-Within-Chest在github上托管，如果有问题或想法可以去提issue",
     "kubejs.tip.tip_128": "不想动脑子？那就动手吧，手摇曲柄助你将一切机械动力机器变成手动",
