器官平衡调整
* 调整了蚀咒纸的收益

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1643,10 +1643,10 @@
     "kubejs.tooltips.dragon_blood_heart.3": "神经效率影响龙化状态的持续时间，龙类器官种类影响龙化效果",
     "kubejs.tooltips.dragon_blood_heart.4": "额外生命值最多为生命值上限*3",
     "kubejs.tooltips.etched_paper.1":"§7积§d咒§7难§b返",
-    "kubejs.tooltips.etched_paper.2":"激活后根据胸腔内每格物品的附魔提供增益",
-    "kubejs.tooltips.etched_paper.3":"每级非诅咒附魔§a提高§7%d法术强度",
-    "kubejs.tooltips.etched_paper.4":"每级诅咒附魔§c降低§7%d法术强度，但§a提高§7%d法力回复",
-    "kubejs.tooltips.etched_paper.5":"至少有5种附魔的每格额外提供%d冷却缩减和%d漂浮",
+    "kubejs.tooltips.etched_paper.2":"激活后根据胸腔内每格物品的附魔提供增益及少量漂浮属性",
+    "kubejs.tooltips.etched_paper.3":"每级非诅咒附魔§a提高§e0.03§7法术强度，但§c降低§e0.02§7法力回复",
+    "kubejs.tooltips.etched_paper.4":"每级诅咒附魔§c降低§e0.01§7法术强度，但§a提高§e0.04§7法力回复",
+    "kubejs.tooltips.etched_paper.5":"每种附魔取最高级计算一次",
     "kubejs.tooltips.etched_paper.6":"§5若你贪得无厌..",
     "kubejs.tooltips.cloud_pyramid.1":"羽化而蹬氙",
     "kubejs.tooltips.cloud_pyramid.2":"按下主动技能按键后获得短暂的缓降效果，",
