--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -339,7 +339,7 @@
     "item.kubejs.flame_heart": "烈焰心脏",
     "item.kubejs.snow_monster_core": "雪怪核心",
     "item.kubejs.armor_with_gaze": "装甲睨隙",
-    "item.kubejs.etched_paper":"蚀咒纸",
+    "item.kubejs.etched_paper": "蚀咒纸",
     "item.kubejs.chameleon_stomach": "变色龙胃囊",
     "item.kubejs.flame_stomach": "烈焰之胃",
     "item.kubejs.flame_spine": "烈焰脊骨",
@@ -448,6 +448,7 @@
     "item.kubejs.blood_extractor": "血清提取器",
     "item.kubejs.glass_vial": "血清瓶",
     "item.kubejs.eye_of_village": "村庄之眼",
+    "item.kubejs.eye_of_dragon": "龙之眼",
     "item.kubejs.holy_potion": "圣灵药",
     "item.kubejs.sponsor_badge": "赞助人徽章",
     "item.kubejs.mysterious_trinket": "神秘饰品",
@@ -1158,6 +1159,7 @@
     "kubejs.tooltips.furnace_torch.1": "用于召唤烈焰狂战士",
     "kubejs.tooltips.power_generator_core.1": "用于召唤电磁脉冲头",
     "kubejs.tooltips.candy_bag.1": "用于制作糖果系列魔法的材料",
+    "kubejs.tooltips.eye_of_dragon.1": "在半径500格内追踪§64阶及以上龙§7的位置",
     "kubejs.tooltips.potent_mixture.1": "使用携带纳米融合词条的Tetra武器杀死爬行者后获得",
     "kubejs.tooltips.withered_nether_star.1": "战胜第一罪的象征",
     "kubejs.tooltips.mob_name.1": "空",
@@ -1642,27 +1644,27 @@
     "kubejs.tooltips.dragon_blood_heart.2": "在龙化状态下，龙类器官会给予你减伤，在减伤溢出时会将伤害转换成额外生命",
     "kubejs.tooltips.dragon_blood_heart.3": "神经效率影响龙化状态的持续时间，龙类器官种类影响龙化效果",
     "kubejs.tooltips.dragon_blood_heart.4": "额外生命值最多为生命值上限*3",
-    "kubejs.tooltips.etched_paper.1":"§7积§d咒§7难§b返",
-    "kubejs.tooltips.etched_paper.2":"激活后根据胸腔内每格物品的附魔提供增益及少量漂浮属性",
-    "kubejs.tooltips.etched_paper.3":"每级非诅咒附魔§a提高§e0.03§7法术强度，但§c降低§e0.02§7法力回复",
-    "kubejs.tooltips.etched_paper.4":"每级诅咒附魔§c降低§e0.01§7法术强度，但§a提高§e0.04§7法力回复",
-    "kubejs.tooltips.etched_paper.5":"每种附魔取最高级计算一次",
-    "kubejs.tooltips.etched_paper.6":"§5若你贪得无厌..",
-    "kubejs.tooltips.cloud_pyramid.1":"羽化而蹬氙",
-    "kubejs.tooltips.cloud_pyramid.2":"按下主动技能按键后获得短暂的缓降效果，",
-    "kubejs.tooltips.cloud_pyramid.3":"并使你胸腔的漂浮属性在§6正常值§7与§6零§7之间切换",
-    "kubejs.tooltips.cloud_pyramid.4":"切换为§6正常值§7时获得跳跃提升",
-    "kubejs.tooltips.cloud_pyramid.5":"切换为§6零§7时若漂浮属性大于4则需要额外消耗法力值",
-    "kubejs.tooltips.armor_with_gaze.1":"专注！",
-    "kubejs.tooltips.armor_with_gaze.2":"注视的敌人对你的近战和弹射物伤害大幅降低",
-    "kubejs.tooltips.armor_with_gaze.3":"其他敌人对你的近战和弹射物伤害伤害提高",
-    "kubejs.tooltips.chameleon_stomach.1":"变色？变温！",
-    "kubejs.tooltips.chameleon_stomach.2":"手持岩浆块或冰块右键，提供一层升温或降温效果，持续60s",
-    "kubejs.tooltips.chameleon_stomach.3":"每层升温或降温效果使你的世界温度提高或降低5℃，两种效果会互相抵消。",
-    "kubejs.tooltips.flame_stomach.1":"它将煤炭转化为热量",
-    "kubejs.tooltips.flame_stomach.2":"手持煤炭右键，立刻提高10℃体温",
-    "kubejs.tooltips.flame_spine.1":"燃烧的脊梁",
-    "kubejs.tooltips.flame_spine.2":"若体温为正，用体温抵消伤害",
+    "kubejs.tooltips.etched_paper.1": "§7积§d咒§7难§b返",
+    "kubejs.tooltips.etched_paper.2": "激活后根据胸腔内每格物品的附魔提供增益及少量漂浮属性",
+    "kubejs.tooltips.etched_paper.3": "每级非诅咒附魔§a提高§e0.03§7法术强度，但§c降低§e0.02§7法力回复",
+    "kubejs.tooltips.etched_paper.4": "每级诅咒附魔§c降低§e0.01§7法术强度，但§a提高§e0.04§7法力回复",
+    "kubejs.tooltips.etched_paper.5": "每种附魔取最高级计算一次",
+    "kubejs.tooltips.etched_paper.6": "§5若你贪得无厌..",
+    "kubejs.tooltips.cloud_pyramid.1": "羽化而蹬氙",
+    "kubejs.tooltips.cloud_pyramid.2": "按下主动技能按键后获得短暂的缓降效果，",
+    "kubejs.tooltips.cloud_pyramid.3": "并使你胸腔的漂浮属性在§6正常值§7与§6零§7之间切换",
+    "kubejs.tooltips.cloud_pyramid.4": "切换为§6正常值§7时获得跳跃提升",
+    "kubejs.tooltips.cloud_pyramid.5": "切换为§6零§7时若漂浮属性大于4则需要额外消耗法力值",
+    "kubejs.tooltips.armor_with_gaze.1": "专注！",
+    "kubejs.tooltips.armor_with_gaze.2": "注视的敌人对你的近战和弹射物伤害大幅降低",
+    "kubejs.tooltips.armor_with_gaze.3": "其他敌人对你的近战和弹射物伤害伤害提高",
+    "kubejs.tooltips.chameleon_stomach.1": "变色？变温！",
+    "kubejs.tooltips.chameleon_stomach.2": "手持岩浆块或冰块右键，提供一层升温或降温效果，持续60s",
+    "kubejs.tooltips.chameleon_stomach.3": "每层升温或降温效果使你的世界温度提高或降低5℃，两种效果会互相抵消。",
+    "kubejs.tooltips.flame_stomach.1": "它将煤炭转化为热量",
+    "kubejs.tooltips.flame_stomach.2": "手持煤炭右键，立刻提高10℃体温",
+    "kubejs.tooltips.flame_spine.1": "燃烧的脊梁",
+    "kubejs.tooltips.flame_spine.2": "若体温为正，用体温抵消伤害",
     "kubejs.tooltips.ice_heart.1": "冰心一出，游戏结束",
     "kubejs.tooltips.ice_heart.2": "体温低于-50℃时，根据体内寒冰器官数目，为玩家附加冷静效果",
     "kubejs.tooltips.ice_heart.3": "冷静效果下，根据体温降低受到的伤害，小幅降低法强，但提供大幅冷却缩减和回蓝",
@@ -1783,8 +1785,34 @@
     "tooltip.translation.spacecatasb.settitle.yeti": "雪怪",
     "tooltip.translation.spacecatasb.settitle.arctic": "极地",
     "tooltip.translation.spacecatasb.settitle.knightphantom": "幻影",
-    "kubejs.statusmsg.organ_sell.1": "通过器官售卖，你的银行账户余额增加了 %d 。",
-    "kubejs.statusmsg.colorful_candy_tp.1": "服用彩虹糖后，你被传送到了 %s 维度",
+    "kubejs.status_msg.organ_sell.1": "通过器官售卖，你的银行账户余额增加了 %d 。",
+    "kubejs.status_msg.colorful_candy_tp.1": "服用彩虹糖后，你被传送到了 %s 维度",
+    "kubejs.status_msg.lucky_cookie.1": "你有些发胖了",
+    "kubejs.status_msg.lucky_cookie.2": "梦想将会实现",
+    "kubejs.status_msg.lucky_cookie.3": "你将遇到重要的人",
+    "kubejs.status_msg.lucky_cookie.4": "你将面临挑战",
+    "kubejs.status_msg.lucky_cookie.5": "尊重他的选择",
+    "kubejs.status_msg.lucky_cookie.6": "与他人分享快乐是好事",
+    "kubejs.status_msg.lucky_cookie.7": "勇敢面对挑战",
+    "kubejs.status_msg.lucky_cookie.8": "最美丽的祝福",
+    "kubejs.status_msg.lucky_cookie.9": "困倦不如先睡去吧",
+    "kubejs.status_msg.lucky_cookie.10": "未来的自己会解决的",
+    "kubejs.status_msg.lucky_cookie.11": "今天或许可以多加把劲",
+    "kubejs.status_msg.lucky_cookie.12": "尝试走向未知领域",
+    "kubejs.status_msg.lucky_cookie.13": "学会观察自己的长处",
+    "kubejs.status_msg.lucky_cookie.14": "或许可以试试侧卧睡觉",
+    "kubejs.status_msg.lucky_cookie.15": "该吃些清淡的食物",
+    "kubejs.status_msg.lucky_cookie.16": "少下矿，多睡觉",
+    "kubejs.status_msg.lucky_cookie.17": "可以尝试一些未接触过的",
+    "kubejs.status_msg.lucky_cookie.18": "释放自身压抑的欲望",
+    "kubejs.status_msg.lucky_cookie.19": "放弃也是一个好选择",
+    "kubejs.status_msg.lucky_cookie.20": "下雨的日子可以带伞",
+    "kubejs.status_msg.lucky_cookie.21": "跑步可以改善你的心情",
+    "kubejs.status_msg.lucky_cookie.22": "有氧运动有益健康",
+    "kubejs.status_msg.lucky_cookie.23": "少食多餐是长寿之道",
+    "kubejs.status_msg.lucky_cookie.24": "改变日常的习惯",
+    "kubejs.status_msg.lucky_cookie.25": "追寻新的奇迹",
+    "kubejs.status_msg.lucky_cookie.26": "新的未来在等待着你",
     "twilightforest.twilight_forest": "暮色森林",
     "minecraft.overworld": "主世界",
     "travelerstitles.twilightforest.twilight_forest": "暮色森林",
