更多修补及Mod更新 (#273)
* 更新部分Mod并添加Hotai

* 解决各种机械动力常见问题

修改打印操作
检查部分方块nbt(解决凭空生成物品)
检查过滤器的nbt(解决过滤器被注入法术/升级球/附魔)

为打印操作添加不允许被替换掉的方块名单配置
可以防止存储被破坏(打印可绕过FTB区块)
可以防止虚空热量锅炉(

* 改为使用Hotai来移除武器大师自爆技能

* 使用Hotai为巨颚漏斗添加生物排除配置

默认配置排除村民,古巨猿,幻象聚晶召唤物

* 使用Hotai阻止LightmansCurrency的币堆下落

* 将胸腔MOD替换为CurseForge版本

UI修改使用Hotai,贴图移至kubejs下
用Hotai对开胸失败提示进行I18N改造

* 将Citadel替换为CurseForge版本

改为使用Hotai去除联网操作

* cursery与hexerei替换为CurseForge版本

* 更新部分MOD,改变部分配置

配置修改:
lootr:使用旧的战利品箱材质
fancymenu:关闭MOD更新后的welcome屏
embeddium:关闭仅可见纹理动画(会导致村正动画失效,部分带动画的方块在手中背包等也不会有动画,直到视野中存在已放置的带动画方块

* 补上缺少的embeddium配置修改

--- a/kubejs/assets/chestcavity/lang/zh_cn.json
+++ b/kubejs/assets/chestcavity/lang/zh_cn.json
@@ -1,4 +1,6 @@
 {
+    "tip.chestopener.fail.obstructed": "无法对穿戴护甲的目标开胸",
+    "tip.chestopener.fail.healthy": "无法对过于健康的目标开胸",
     "death.attack.ccHeartbleed": "%1$s成为了献给太阳的祭品",
     "death.attack.ccHeartbleed.player": "%2$s见证了%1$s的献祭过程",
     "death.attack.ccOrganRejection": "%1$s死于器官移植并发症",
