--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -229,8 +229,8 @@
     "mrqx_extra_pack.jei.fox_soul.1": "有30%的概率出现在由玩家繁殖的小狐狸口中",
     "mrqx_extra_pack.jei.gain_in_forge_ruin.1": "在锻造遗迹中获取",
     "mrqx_extra_pack.jei.mrqx_element_damage.1": "§5末影损伤§r达到100时，消耗100§5末影损伤§r使其额外受到100点龙息伤害（不致死，不受额外加成影响），并使其获得10s的§5深渊烧灼§r、§5深渊恐惧§r、§5极度恐惧§r",
-    "mrqx_extra_pack.jei.mrqx_element_damage.2": "§c灼燃损伤§r达到100时，消耗100§c灼燃损伤§r使其额外受到100点岩浆伤害（不致死，不受额外加成影响），并使其获得10s的§c助燃性§r、§c灼烧魔印§r、§c炽热烙印§r",
-    "mrqx_extra_pack.jei.mrqx_element_damage.3": "§b冻结损伤§r达到100时，消耗100§b冻结损伤§r使其额外受到100点冻结伤害（不致死，不受额外加成影响），并使其获得10s的§b缓慢§r、§b雪肤§r、§b冻结§r",
+    "mrqx_extra_pack.jei.mrqx_element_damage.2": "§c灼燃损伤§r达到100时，消耗100§c灼燃损伤§r使其额外受到100点岩浆伤害（不致死，不受额外加成影响），并使其获得10s的§c助燃性§r、§c升温§r、§c炽热烙印§r",
+    "mrqx_extra_pack.jei.mrqx_element_damage.3": "§b冻结损伤§r达到100时，消耗100§b冻结损伤§r使其额外受到100点冻结伤害（不致死，不受额外加成影响），并使其获得10s的§b缓慢§r、§b降温§r、§b冻结§r",
     "mrqx_extra_pack.jei.mrqx_element_damage.4": "§9雷霆损伤§r达到100时，消耗100§9雷霆损伤§r使其额外受到100点雷电伤害（不致死，不受额外加成影响），并使其获得10s的§9眩晕§r、§9痉挛§r、§9箭矢磁吸§r",
     "mrqx_extra_pack.jei.mrqx_element_damage.5": "§0凋亡损伤§r达到100时，消耗100§0凋亡损伤§r使其额外受到100点凋零伤害（不致死，不受额外加成影响），并使其获得10s的§0凋零§r、§0凋零腐败§r、§0衰弱§r",
     "mrqx_extra_pack.jei.mrqx_element_damage.6": "单次伤害可触发多次损伤效果，状态效果的等级可叠加",
