温度器官效果重制 - 1

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -1187,7 +1187,7 @@
     "kubejs.tooltips.burning_heart.2": "心火を燃やして、ぶっ潰す！",
     "kubejs.tooltips.burning_heart.3": "手持煤炭右键以获得%ds心火燃烧效果",
     "kubejs.tooltips.burning_heart.4": "在心火燃烧buff仅剩的最后%ds，会根据状态等级提供心火暴击效果",
-    "kubejs.tooltips.burning_heart.5": "每层熔火燃烧状态使你的世界温度上升10℃，与熔火状态不兼容",
+    "kubejs.tooltips.burning_heart.5": "每层心火燃烧状态使你的世界温度上升10℃，与熔火状态不兼容",
     "kubejs.tooltips.revolution_cable.1": "每存在一种类为革命的器官，会为你添加额外%d点生命值",
     "kubejs.tooltips.revolution_gear.1": "每%d个该器官提供额外的%d级熔火等级",
     "kubejs.tooltips.revolution_gear.5": "每",
@@ -1372,10 +1372,10 @@
     "kubejs.tooltips.lightning_dragon_bead.3": "使用者的最大生命值越多，电刑技能的超限等级越高",
     "kubejs.tooltips.lightning_dragon_bead.4": "释放时法力值不足500将消耗生命值补全法力需求，不致死",
     "kubejs.tooltips.flame_muscle.1": "烈焰给予我力量",
-    "kubejs.tooltips.flame_muscle.2": "若体温为正，近战攻击时，降低一半的体温，附加等量伤害",
+    "kubejs.tooltips.flame_muscle.2": "若体温为正，近战攻击时，通过降低§61§7点体温，给予等同于§c环境温度§7的额外伤害",
     "kubejs.tooltips.flame_heart.1": "他在火焰中跳动",
-    "kubejs.tooltips.flame_heart.2": "体温大于50℃时，根据体内烈焰器官数目，使玩家进入过载状态",
-    "kubejs.tooltips.flame_heart.3": "过载状态下，根据体温提高受到和造成的伤害倍率，并提供大量基础数值",
+    "kubejs.tooltips.flame_heart.2": "体温大于§650℃§7时，根据体内§c烈焰器官§7数目，使玩家进入过载状态",
+    "kubejs.tooltips.flame_heart.3": "过载状态下，根据体温提高受到和造成的§6伤害倍率§7，并提供大量基础数值",
     "kubejs.tooltips.snow_monster_core.1": "很可爱的小东西，不是吗？",
     "kubejs.tooltips.snow_monster_core.2": "你丢出的雪球将被转化为冰霜炸弹",
     "kubejs.tooltips.ore_lung.1": "吸入了过多灰尘，已经残破不堪",
@@ -1644,13 +1644,10 @@
     "kubejs.tooltips.dragon_blood_heart.2": "在龙化状态下，龙类器官会给予你减伤，在减伤溢出时会将伤害转换成额外生命",
     "kubejs.tooltips.dragon_blood_heart.3": "神经效率影响龙化状态的持续时间，龙类器官种类影响龙化效果",
     "kubejs.tooltips.dragon_blood_heart.4": "额外生命值最多为生命值上限*3",
-    "kubejs.tooltips.etched_paper.1": "§7积§d咒§7难§b返",
-    "kubejs.tooltips.etched_paper.2": "激活后根据胸腔内每格物品的附魔提供增益及少量漂浮属性",
-    "kubejs.tooltips.etched_paper.3": "每级非诅咒附魔§a提高§e0.03§7法术强度，但§c降低§e0.02§7法力回复",
-    "kubejs.tooltips.etched_paper.4": "每级诅咒附魔§c降低§e0.01§7法术强度，但§a提高§e0.04§7法力回复",
-    "kubejs.tooltips.etched_paper.5": "每种附魔取最高级计算一次",
-    "kubejs.tooltips.etched_paper.6": "§5若你贪得无厌..",
-    "kubejs.tooltips.cloud_pyramid.1": "羽化而蹬氙",
+    "kubejs.tooltips.etched_paper.1": "恶命难求",
+    "kubejs.tooltips.etched_paper.2": "你所携带的每种负面效果，会使得附魔出的所有附魔等级提高0.5级",
+    "kubejs.tooltips.etched_paper.3": "但每种负面效果会使得所有附魔槽位的经验消耗上升5级",
+    "kubejs.tooltips.cloud_pyramid.1": "羽化而登仙",
     "kubejs.tooltips.cloud_pyramid.2": "按下主动技能按键后获得短暂的缓降效果，",
     "kubejs.tooltips.cloud_pyramid.3": "并使你胸腔的漂浮属性在§6正常值§7与§6零§7之间切换",
     "kubejs.tooltips.cloud_pyramid.4": "切换为§6正常值§7时获得跳跃提升",
@@ -1664,8 +1661,8 @@
     "kubejs.tooltips.flame_stomach.1": "它将煤炭转化为热量",
     "kubejs.tooltips.flame_stomach.2": "手持煤炭右键，立刻提高10℃体温",
     "kubejs.tooltips.flame_spine.1": "燃烧的脊梁",
-    "kubejs.tooltips.flame_spine.2": "若体温为正，用体温抵消伤害",
-    "kubejs.tooltips.ice_heart.1": "冰心一出，游戏结束",
+    "kubejs.tooltips.flame_spine.2": "若体温为正，则用体温§6抵消伤害§7",
+    "kubejs.tooltips.ice_heart.1": "于严寒中颤动的心脏",
     "kubejs.tooltips.ice_heart.2": "体温低于-50℃时，根据体内寒冰器官数目，为玩家附加冷静效果",
     "kubejs.tooltips.ice_heart.3": "冷静效果下，根据体温降低受到的伤害，小幅降低法强，但提供大幅冷却缩减和回蓝",
     "kubejs.tooltips.ice_lung.1": "吐出的每一个字都结着霜",
@@ -1912,7 +1909,7 @@
     "kubejs.tip.tip_84": "感觉食物不够？为什么不问问神奇的开胸器呢",
     "kubejs.tip.tip_85": "不要拿金属做武器手柄，除非你想亏材料的同时被叉出去",
     "kubejs.tip.tip_86": "龙的方块破坏也许被关了？不知道哦～～",
-    "kubejs.tip.tip_87": "想要制造一场毁灭世界的凋灵风暴？也许一些被隐藏的秘密会告诉你召唤它的方式，试着集齐它们吧！",
+    "kubejs.tip.tip_87": "或许矿石肺可以跟某些材料达成共识？",
     "kubejs.tip.tip_88": "缺矿物了，但又不会做机械动力的盾构机？为什么不试试矿石肺呢？或许你可以多装几个……",
     "kubejs.tip.tip_89": "绯红森林的“树叶”地狱疣块也许是营养膏的优秀来源",
     "kubejs.tip.tip_90": "传说使用某种蓝色手术器具用一些奇怪的方法或许可以取得死龙体内的器官",
@@ -1947,7 +1944,7 @@
     "kubejs.tip.tip_119": "刚开始可以试试穿木头护甲，有回血效果哦！",
     "kubejs.tip.tip_120": "冰火收集器可以通过烧训练人偶来增加灵魂能量，试试吧",
     "kubejs.tip.tip_121": "训练人偶可以通过活塞挤压到一起，方便训练",
-    "kubejs.tip.tip_122": "做奶油前记得把奶桶和4个玻璃瓶合成瓶装奶，否则做了4个只能拿出一个",
+    "kubejs.tip.tip_122": "探索到后期没动力？不如来尝试更多的搭配吧！",
     "kubejs.tip.tip_123": "不要做机械动力的区块清空机，区块清空会上瘾的！！！",
     "kubejs.tip.tip_124": "黯光后续会添加各种各样的新维度",
     "kubejs.tip.tip_125": "据说在未来的更新中还存在所谓的终局材料？",
