修复dupe漏洞,完善先进开胸器 (#280)
用hotai阻止机械动力移动rs与功能性存储的方块
用hotai修复开胸器dupe漏洞
将胸腔标题i18n化

对开胸器的修补同步到先进开胸器,并添加先进开胸器开胸失败的提示

--- a/kubejs/assets/chestcavity/lang/en_us.json
+++ b/kubejs/assets/chestcavity/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+	"title.name.suffix": "'s ",
+	"title.chestcavity": "Chest Cavity",
     "tip.chestopener.fail.obstructed": "Target's chest is obstructed",
     "tip.chestopener.fail.healthy": "Target is too healthy to open",
     "death.attack.ccHeartbleed": "%1$s's sacrifice has nourished the sun",
