--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -28,6 +28,45 @@
     "enchantment.kubejs.creative_operation.desc": "无视条件打开胸腔",
     "enchantment.kubejs.safe_operation": "安全手术",
     "enchantment.kubejs.safe_operation.desc": "不会把自己作为打开胸腔的目标",
+    "champion.kubejs": "%s 精英",
+    "champion.kubejs.connect_symbol": "%s · %s",
+    "champion.kubejs.type.fight_for_death": "§5死战",
+    "champion.kubejs.type.fight_for_death.desc": "攻击时将会为你附加死亡宣告效果",
+    "champion.kubejs.type.low_frequency": "§b低频",
+    "champion.kubejs.type.low_frequency.desc": "受到攻击后有着更长的无敌时间",
+    "champion.kubejs.type.purify": "§b净化",
+    "champion.kubejs.type.purify.desc": "攻击时会净化掉玩家身上所有正面效果",
+    "champion.kubejs.type.fierce_battle": "§6鏖战",
+    "champion.kubejs.type.fierce_battle.desc": "攻击时会赋予玩家侵蚀效果，并逐渐提升自身的伤害吸收效果",
+    "champion.kubejs.type.destruction": "§6崩毁",
+    "champion.kubejs.type.destruction.desc": "攻击时会赋予玩家穿孔效果",
+    "champion.kubejs.type.awed": "§6震慑",
+    "champion.kubejs.type.awed.desc": "攻击时封锁玩家右键，给予自身生命恢复效果",
+    "champion.kubejs.type.purity": "§b纯净",
+    "champion.kubejs.type.purity.desc": "受到攻击后净化自身所有负面效果",
+    "champion.kubejs.type.corrupt": "§c腐蚀",
+    "champion.kubejs.type.corrupt.desc": "攻击时额外减少玩家装备耐久",
+    "champion.kubejs.type.grue": "§c格鲁",
+    "champion.kubejs.type.grue.desc": "攻击时会激发玩家对黑暗的恐惧",
+    "champion.kubejs.type.unbending": "§b根性",
+    "champion.kubejs.type.unbending.desc": "随着血量减少增加减伤幅度",
+    "champion.kubejs.type.exhausted": "§b封魔",
+    "champion.kubejs.type.exhausted.desc": "攻击时会赋予玩家魔力空虚效果",
+    "champion.kubejs.type.consecration": "§c圣化",
+    "champion.kubejs.type.consecration.desc": "若非着火状态或不在火中，获得大幅度减伤",
+    "champion.kubejs.type.smash": "§c粉碎",
+    "champion.kubejs.type.smash.desc": "取消攻击伤害，但是每次造成最大生命值10%的真实伤害",
+    "champion.kubejs.type.fate": "§c命运",
+    "champion.kubejs.type.fate.desc": "每次受到近战致死攻击有50%概率免疫此伤害并恢复到20%最大生命值",
+    "champion.kubejs.type.parry": "§c招架",
+    "champion.kubejs.type.parry.desc": "每次受到弹射物伤害有50%几率免疫此伤害",
+    "createoreexcavation.kubejs.silver_ore": "银矿",
+    "createoreexcavation.kubejs.lapis_lazuli": "青金石矿",
+    "createoreexcavation.kubejs.gold_nugget": "下界金矿",
+    "createoreexcavation.kubejs.ancient_debris": "远古残骸矿",
+    "createoreexcavation.kubejs.arcane_debris": "奥术残骸矿",
+    "createoreexcavation.kubejs.lava": "熔岩",
+    "createoreexcavation.kubejs.quicksilver_fluid": "水银",
     "item.kubejs.archivist_eyeglass": "档案员单片镜",
     "item.kubejs.random_delivery_agreement": "随机交货协议",
     "item.kubejs.command_spell_book": "指令魔法书",
@@ -474,11 +513,22 @@
     "effect.kubejs.overload": "过载",
     "effect.kubejs.ice": "冷静",
     "travelerstitles.kubejs.lost_memory": "回忆之地",
-    "kubejs.msg.tamagotchi.1": "Tamagotchi饿了！Tamagotchi想吃饭！",
-    "kubejs.msg.tamagotchi.2": "Tamagotchi吃饱了！Tamagotchi很开心！",
+    "kubejs.msg.tamagotchi.1": "§7Tamagotchi饿了！Tamagotchi想吃饭！",
+    "kubejs.msg.tamagotchi.2": "§7Tamagotchi吃饱了！Tamagotchi很开心！",
     "kubejs.msg.treasure_detector_feather.1": "这个世界没有宝藏的气息",
-    "kubejs.msg.warp.1": "你感觉一股恶意爬上了脊梁",
-    "kubejs.msg.warp.2": "你感觉你被净化了！",
+    "kubejs.msg.warp.1": "§5你感觉一股恶意爬上了脊梁",
+    "kubejs.msg.warp.2": "§b你感觉你被净化了！",
+    "kubejs.msg.healing_additive.1": "似乎该物品不需要进行抗排异",
+    "kubejs.msg.healing_additive.2": "如果要使用抗排异功能，请将药物放在副手，器官置于主手",
+    "kubejs.msg.unbreakable_core.1": "如果要使用不毁加持功能，请将不毁核心放在副手，物品置于主手",
+    "kubejs.msg.unbreakable_core.2": "该物品已进行过不毁加持！",
+    "kubejs.msg.unbreakable_core.3": "不满足耐久要求！",
+    "kubejs.msg.disenchantment_book.1": "如果要使用祛魔功能，请将祛魔书放在副手，物品置于主手",
+    "kubejs.msg.disenchantment_book.2": "没有可取下的附魔！",
+    "kubejs.msg.friend_to_the_end.1": "无法传送，对方可能不在线/处于死亡状态。",
+    "kubejs.msg.friend_to_the_end.2": "已将该戒指绑定到你的身上！",
+    "kubejs.msg.operation_box.1": "器官已替换",
+    "kubejs.msg.pardon_of_god.1": "§7它的身体似乎发生了什么变化. . .",
     "golem_material.biomancy.living_flesh": "鲜活肉块",
     "entity.goety.hostile_redstone_golem": "敌对红石傀儡",
     "kubejs.boss_rush": "Boss Rush",
@@ -1789,10 +1839,12 @@
     "kubejs.status_msg.lucky_cookie.24": "改变日常的习惯",
     "kubejs.status_msg.lucky_cookie.25": "追寻新的奇迹",
     "kubejs.status_msg.lucky_cookie.26": "新的未来在等待着你",
+    "kubejs.status_msg.disenchantment_paper.1": "§d祛魔虫§r吃下了一个§c诅咒附魔",
+    "kubejs.status_msg.flaring_heart.1": "§4心火状态: §7%s§7 / 100  §3倍率: §e%s§e倍",
     "twilightforest.twilight_forest": "暮色森林",
     "minecraft.overworld": "主世界",
     "travelerstitles.twilightforest.twilight_forest": "暮色森林",
-    "kubejs.recipe.tip.1": "被净化的器官",
+    "kubejs.recipe.tip.1": "§7被净化的器官",
     "kubejs.tip.secret_hint": "对着秘密物品按下shift或许会有额外的发现！",
     "kubejs.tip.wares_useage": "使用交货台在村庄里快速提交交货协议",
     "kubejs.tip.magic_forbiden": "魔力空虚状态会扣减10000点魔力上限",
