--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -1,6 +1,7 @@
 {
     "attribute.obscure_api.penetration": "穿甲",
     "effect.mrqx_extra_pack.charged_blade_effect": "充能刀刃",
+    "effect.mrqx_extra_pack.demonization_kill": "恶魔化·灭杀",
     "effect.mrqx_extra_pack.ghost_of_dead_soul": "魂灵残影",
     "effect.mrqx_extra_pack.nuclear_power": "核能动力",
     "effect.mrqx_extra_pack.steam_power": "蒸汽动力",
@@ -21,13 +22,16 @@
     "item.mrqx_extra_pack.appendix_paper": "纸阑尾",
     "item.mrqx_extra_pack.appendix_paper_written": "书写过的纸阑尾",
     "item.mrqx_extra_pack.artificial_mineral_cluster": "人造矿簇",
+    "item.mrqx_extra_pack.aurora_active_ice_dragon_bead": "激活·冰龙宝玉·极光化",
     "item.mrqx_extra_pack.automatic_wax_protector": "自动蜡护仪",
     "item.mrqx_extra_pack.basic_uncoded_cpu": "基础未编码处理器",
     "item.mrqx_extra_pack.black_hole": "黑洞",
     "item.mrqx_extra_pack.broken_sun": "残阳",
+    "item.mrqx_extra_pack.buring_blood_active_fire_dragon_bead": "激活·火龙宝玉·炽血化",
     "item.mrqx_extra_pack.celestial_body_astrology_cpu": "天体“占星”处理器",
     "item.mrqx_extra_pack.charged_blade": "充能刀刃",
     "item.mrqx_extra_pack.chocolate_coinage_machine": "‌巧克力铸币机",
+    "item.mrqx_extra_pack.command_spell_book": "指令魔法书",
     "item.mrqx_extra_pack.command_spell_core": "指令施法核心",
     "item.mrqx_extra_pack.compressed_biscuit": "压缩饼干",
     "item.mrqx_extra_pack.cpu": "处理器",
@@ -76,7 +80,6 @@
     "item.mrqx_extra_pack.liver_antimatter": "反物质肝",
     "item.mrqx_extra_pack.liver_paper": "纸肝",
     "item.mrqx_extra_pack.liver_paper_written": "书写过的纸肝",
-    "item.mrqx_extra_pack.command_spell_book": "指令魔法书",
     "item.mrqx_extra_pack.liver_tide_observation": "“潮汐守望”肝",
     "item.mrqx_extra_pack.long_telescopic_attack_arm": "长伸缩攻击臂",
     "item.mrqx_extra_pack.long_telescopic_piston_arm": "长伸缩活塞臂",
@@ -130,6 +133,7 @@
     "item.mrqx_extra_pack.nuclear_fuel": "核反应燃料",
     "item.mrqx_extra_pack.origin_sin": "‌原罪·罪源",
     "item.mrqx_extra_pack.pancreas_group_hunting": "“集群狩猎”胰",
+    "item.mrqx_extra_pack.phantom_heart": "幻魔心脏",
     "item.mrqx_extra_pack.pineapple_shrimp_fried_rice": "菠萝虾仁炒饭",
     "item.mrqx_extra_pack.portable_medical_checkup_device": "便携式体检仪",
     "item.mrqx_extra_pack.prison_soul": "死狱之魂",
@@ -169,6 +173,7 @@
     "item.mrqx_extra_pack.sin_luxuria_asmodeus": "‌原罪·色欲「阿斯莫德」",
     "item.mrqx_extra_pack.sin_superbia_lucifer": "‌原罪·傲慢「路西法」",
     "item.mrqx_extra_pack.solar_mirror": "‌太阳光镜",
+    "item.mrqx_extra_pack.soul_of_emerald_pickaxe": "绿宝石镐之魂",
     "item.mrqx_extra_pack.spine_abyssal_intuition": "“深海直觉”脊柱",
     "item.mrqx_extra_pack.spine_antimatter": "反物质脊椎",
     "item.mrqx_extra_pack.spine_paper": "纸脊椎",
@@ -201,7 +206,10 @@
     "item.mrqx_extra_pack.tianshi_yi": "天师仪",
     "item.mrqx_extra_pack.tumor_mutagen": "肿瘤诱变剂",
     "item.mrqx_extra_pack.uranium": "铀",
+    "item.mrqx_extra_pack.vacuum_freezer": "真空冷冻机",
+    "item.mrqx_extra_pack.warp_capacitance": "扭曲电容",
     "item.mrqx_extra_pack.warp_electrical_box": "扭曲变电箱",
+    "item.mrqx_extra_pack.warp_entropy_change_machine": "扭曲熵变机",
     "item.mrqx_extra_pack.warrior_output_high": "“战士输出高”",
     "item.mrqx_extra_pack.white_hole": "白洞",
     "item.mrqx_extra_pack.wing_of_soul": "灵魂之翼",
@@ -224,7 +232,6 @@
     "mrqx_extra_pack.advancements_check.mystery_sinners": "你还没有探索§c罪者§r之奥秘的资格……（进度：%s%%）",
     "mrqx_extra_pack.advancements_check.mystery_soul": "你还没有探索§9灵魂§r之奥秘的资格……（进度：%s%%）",
     "mrqx_extra_pack.advancements_check.mystery_stars": "你还没有探索§f星辰§r之奥秘的资格……（进度：%s%%）",
-    "mrqx_extra_pack.mrqx_god_judgement": "神之惩戒",
     "mrqx_extra_pack.jei.cpu.1": "基础§7算力§r= §e处理器§r器官个数 + 神经效率",
     "mrqx_extra_pack.jei.fox_soul.1": "有30%的概率出现在由玩家繁殖的小狐狸口中",
     "mrqx_extra_pack.jei.gain_in_forge_ruin.1": "在锻造遗迹中获取",
@@ -235,12 +242,13 @@
     "mrqx_extra_pack.jei.mrqx_element_damage.5": "§0凋亡损伤§r达到100时，消耗100§0凋亡损伤§r使其额外受到100点凋零伤害（不致死，不受额外加成影响），并使其获得10s的§0凋零§r、§0凋零腐败§r、§0衰弱§r",
     "mrqx_extra_pack.jei.mrqx_element_damage.6": "单次伤害可触发多次损伤效果，状态效果的等级可叠加",
     "mrqx_extra_pack.jei.mrqx_nuclear.1": "用于 §7核能§r器官反应",
+    "mrqx_extra_pack.mrqx_god_judgement": "神之惩戒",
     "mrqx_extra_pack.mrqx_mechanical_frenzy": "机械狂潮",
+    "mrqx_extra_pack.mrqx_shadow_of_caerula_arbor": "深蓝之树之影",
     "mrqx_extra_pack.msg.divine_pen.1": "副手须持握铁魔法的墨水！",
     "mrqx_extra_pack.msg.divine_pen.2": "胸腔中存在§f纸§r器官！",
     "mrqx_extra_pack.msg.fission_reactor.1": "核反应燃料不足！",
     "mrqx_extra_pack.msg.fission_reactor.2": "核反应已在进行！",
-    "mrqx_extra_pack.mrqx_shadow_of_caerula_arbor": "深蓝之树之影",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.00": "未持有",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.01": "等级：%s",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.02": "剩余时长：%ss",
@@ -350,6 +358,8 @@
     "mrqx_extra_pack.tooltips.appendix_paper.1": "可书写：幸运、箭矢闪避、龙息炸弹、怪异、爆炸",
     "mrqx_extra_pack.tooltips.appendix_paper_written.1": "奇迹般地，存在于纸面上的数据成为了事实",
     "mrqx_extra_pack.tooltips.artificial_mineral_cluster.1": "只是把一些矿物混合在了一起",
+    "mrqx_extra_pack.tooltips.aurora_active_ice_dragon_bead.1": "它在你手里映射极光",
+    "mrqx_extra_pack.tooltips.aurora_active_ice_dragon_bead.2": "造成伤害时，额外造成(-伤害值×体温)的§b冻结损伤§r",
     "mrqx_extra_pack.tooltips.automatic_wax_protector.1": "防水性能++",
     "mrqx_extra_pack.tooltips.automatic_wax_protector.2": "激活后，根据胸腔中的§e蜜脾§r数量提供对书写过的§f纸§r器官的防护",
     "mrqx_extra_pack.tooltips.automatic_wax_protector.3": "§e蜜脾§r数量达到64时，书写过的§f纸§r器官将得到对水的完全防护；达到256时，书写过的§f纸§r器官将得到对火的完全防护；达到1024时，书写过的§f纸§r器官将得到对岩浆的完全防护",
@@ -363,6 +373,8 @@
     "mrqx_extra_pack.tooltips.broken_sun.5": "Aaa...they can't take out my spark",
     "mrqx_extra_pack.tooltips.broken_sun.6": "I won't let you go dark",
     "mrqx_extra_pack.tooltips.broken_sun.7": "持续给予周围玩家§e生命恢复§rV，§e力量§rIV，§e抗性提升§rIII，§e速度§rII，§e夜视§r，§6天体§r器官数提供范围",
+    "mrqx_extra_pack.tooltips.buring_blood_active_fire_dragon_bead.1": "它在你手里愈加炙热",
+    "mrqx_extra_pack.tooltips.buring_blood_active_fire_dragon_bead.2": "造成伤害时，额外造成(伤害值×体温)的§c灼燃损伤§r",
     "mrqx_extra_pack.tooltips.celestial_body_astrology_cpu.1": "指令：星体重构",
     "mrqx_extra_pack.tooltips.celestial_body_astrology_cpu.2": "就像星星一样，指引人们前行",
     "mrqx_extra_pack.tooltips.celestial_body_astrology_cpu.3": "激活后，每点§7算力§r提供+1§6天体§r器官个数",
@@ -390,17 +402,18 @@
     "mrqx_extra_pack.tooltips.energy_core.1": "借助世界框架中的奥秘之力，你找到了资源值存储的最终方案……",
     "mrqx_extra_pack.tooltips.energy_core.2": "激活后，§6资源值§r上限增加21亿",
     "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.1": "看上去……像个肺？",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.10": "资源值越高，越容易产出高级的矿簇，如果未满足额外条件，则降级为前一级的矿簇",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.11": "资源值<=100或潜行状态下不会触发转化",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.12": "激活后，胸腔中每个§b矿石肺§r提供+100§6资源值§r上限，并使其特殊效果失效",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.2": "每次挖掘石头有50%概率不掉落，而是将其转化为等同于§6资源§r器官数量的资源值",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.3": "如果胸腔中存在§b机械“挖矿”处理器§r，则概率变为100%",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.4": "同时有5%概率将当前所有资源值转化为矿簇：",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.5": "资源值>100时能产出常见矿簇（消耗10资源值）",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.6": "资源值>200时能产出稀有矿簇（消耗20资源值）",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.7": "资源值>300时能产出人造矿簇（消耗30资源值）",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.8": "资源值>400时能产出魔化人造矿簇（消耗40资源值和10法力值）",
-    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.9": "资源值>500时能产出异化人造矿簇（消耗50资源值、10法力值和10扭曲值）",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.10": "资源值>500时能产出异化人造矿簇（消耗50资源值、10法力值和10扭曲值）",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.11": "资源值越高，越容易产出高级的矿簇，如果未满足额外条件，则降级为前一级的矿簇",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.12": "资源值<=100或潜行状态下不会触发转化",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.13": "激活后，胸腔中每个§b矿石肺§r提供+100§6资源值§r上限，并使其特殊效果失效",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.2": "§e杰出赞助者：凸Owo§r",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.3": "每次挖掘石头有50%概率不掉落，而是将其转化为等同于§6资源§r器官数量的资源值",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.4": "如果胸腔中存在§b机械“挖矿”处理器§r，则概率变为100%",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.5": "同时有5%概率将当前所有资源值转化为矿簇：",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.6": "资源值>100时能产出常见矿簇（消耗10资源值）",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.7": "资源值>200时能产出稀有矿簇（消耗20资源值）",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.8": "资源值>300时能产出人造矿簇（消耗30资源值）",
+    "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.9": "资源值>400时能产出魔化人造矿簇（消耗40资源值和10法力值）",
     "mrqx_extra_pack.tooltips.eternal_wing_of_soul.1": "近乎有形的翼展，使你能够在空中自由移动",
     "mrqx_extra_pack.tooltips.eternal_wing_of_soul.2": "激活后，获得创造飞行能力，飞行速度+3",
     "mrqx_extra_pack.tooltips.fallen_paradise_container.1": "（Luna's联动）承装着堕乐园，自动吸收背包中的无尽之力，可通过手持右键取出",
@@ -409,9 +422,10 @@
     "mrqx_extra_pack.tooltips.fission_reactor.2": "激活时，右键消耗§e核反应燃料§r获得§c核能动力§r（每级增加§e0.5§r的攻击伤害乘数，默认持续时间5 min）",
     "mrqx_extra_pack.tooltips.fission_reactor.3": "如果相邻四格存在§e反应舱室§r，则额外消耗核反应燃料（每个反应舱室+1个），提升效果等级（每个反应舱室+1级）和持续时间（由+4 min递减至+1 min）",
     "mrqx_extra_pack.tooltips.fission_reactor.4": "如果核反应燃料不足，则不会进行反应",
-    "mrqx_extra_pack.tooltips.fission_reactor.5": "如果在效果结束前取下§e裂变反应堆§r或§e反应舱室§r，则会发生大爆炸",
-    "mrqx_extra_pack.tooltips.fission_reactor.6": "若要安全地取下反应堆，请先使自身保持在未激活状态，待效果结束后再取下反应堆",
-    "mrqx_extra_pack.tooltips.fission_reactor.7": "冷却时间5分钟",
+    "mrqx_extra_pack.tooltips.fission_reactor.5": "反应时，根据§c核能动力§r等级持续提升体温",
+    "mrqx_extra_pack.tooltips.fission_reactor.6": "如果在效果结束前取下§e裂变反应堆§r或§e反应舱室§r，则会发生大爆炸",
+    "mrqx_extra_pack.tooltips.fission_reactor.7": "若要安全地取下反应堆，请先使自身保持在未激活状态，待效果结束后再取下反应堆",
+    "mrqx_extra_pack.tooltips.fission_reactor.8": "冷却时间5分钟",
     "mrqx_extra_pack.tooltips.fox_soul.1": "狐仙的真挚祝福",
     "mrqx_extra_pack.tooltips.fox_soul.2": "激活后，攻击回复伤害值5%的饱和度",
     "mrqx_extra_pack.tooltips.fox_soul.3": "§c集齐四魂时，回复量变为5倍§r",
@@ -440,7 +454,8 @@
     "mrqx_extra_pack.tooltips.heart_tidal_elegy.3": "如果集齐所有种类的§1深海§r器官，上述加成翻倍",
     "mrqx_extra_pack.tooltips.heat_vent.1": "据说如果它停了，就会有人满头大汗",
     "mrqx_extra_pack.tooltips.heat_vent.2": "反应开始时，将§c核能动力§r的效果等级降低1级，并提升§e20%§r的时长（最低降至1级）",
-    "mrqx_extra_pack.tooltips.heat_vent.3": "必须与§e反应舱室§r相邻",
+    "mrqx_extra_pack.tooltips.heat_vent.3": "反应时，持续降低体温",
+    "mrqx_extra_pack.tooltips.heat_vent.4": "必须与§e反应舱室§r相邻",
     "mrqx_extra_pack.tooltips.infinity_force_container.1": "承装着无尽之力，自动吸收背包中的无尽之力，可通过手持右键取出",
     "mrqx_extra_pack.tooltips.infinity_force_container.2": "已存储：+%s（%s%%至下一级）",
     "mrqx_extra_pack.tooltips.intestine_paper.1": "可书写：营养获取效率、嗜腐、草食营养、肉食营养、结晶",
@@ -546,6 +561,7 @@
     "mrqx_extra_pack.tooltips.mechanical_frenzy.1": "§c请携带一枚下界之星以激活最终BOSS！！！§r",
     "mrqx_extra_pack.tooltips.meteor_shower_director.1": "星雨来了",
     "mrqx_extra_pack.tooltips.meteor_shower_director.2": "‌按下主动技能按键，消耗所有法力值施放§6超限：星海落瀑§r，根据消耗的法力值、§6天体§r器官个数和§7算力§r提供额外超限等级",
+    "mrqx_extra_pack.tooltips.meteor_shower_director.3": "如果玩家在暮色森林中，则再额外提升50%的超限等级",
     "mrqx_extra_pack.tooltips.mini_end_crystal.1": "神秘的力量在你的胸中凝聚",
     "mrqx_extra_pack.tooltips.mini_end_crystal.2": "根据§e结晶§r持续回复生命值",
     "mrqx_extra_pack.tooltips.mint_milk_tea.1": "清凉，好喝",
@@ -616,6 +632,14 @@
     "mrqx_extra_pack.tooltips.pancreas_group_hunting.2": "激活后，每有一个§1深海§r器官，攻击力+10%",
     "mrqx_extra_pack.tooltips.pancreas_group_hunting.3": "如果集齐所有种类的§1深海§r器官，上述加成翻倍",
     "mrqx_extra_pack.tooltips.paper_written.1": "在雨中、水中、燃烧状态、火中、岩浆中时，器官数值的绝对值逐渐减少",
+    "mrqx_extra_pack.tooltips.paper_written.2": "体温较高时在雨中、水中数值更不容易减少，体温较低时在燃烧状态、火中、岩浆中数值更不容易减少",
+    "mrqx_extra_pack.tooltips.phantom_heart.1": "Kids are cruel,and I'm very in touch with my inner child.",
+    "mrqx_extra_pack.tooltips.phantom_heart.2": "§e杰出赞助者：索多玛浪人§r",
+    "mrqx_extra_pack.tooltips.phantom_heart.3": "按下主动技能按键时，若扭曲值大于60，则消耗所有扭曲值获得§c恶魔化·灭杀§r效果；否则消耗至多40资源点增加等量扭曲值。冷却时间30s",
+    "mrqx_extra_pack.tooltips.phantom_heart.4": "每点力量、神经效率提供+10s持续时间与冷却时间，每个§6烈焰§r/§b魔法§r/§1深海§r/§4七原罪§r器官提供+1效果等级",
+    "mrqx_extra_pack.tooltips.phantom_heart.5": "每级§c恶魔化·灭杀§r提供+200最大法力值，+20%冷却缩减，+20%攻击伤害，+20%法术强度",
+    "mrqx_extra_pack.tooltips.phantom_heart.6": "持有§c恶魔化·灭杀§r时造成伤害，将有20%概率施加1min§c切割§r和§c致命伤§r效果（已有则等级+1）",
+    "mrqx_extra_pack.tooltips.phantom_heart.7": "激活后，-50%最大生命值。若玩家的扭曲值大于120，每秒钟扣除200法力值并给予玩家生命提升X",
     "mrqx_extra_pack.tooltips.pineapple_shrimp_fried_rice.1": "§8一道未完成的菜",
     "mrqx_extra_pack.tooltips.pineapple_shrimp_fried_rice.2": "§8致一位已过世的友人",
     "mrqx_extra_pack.tooltips.portable_medical_checkup_device.1": "长按右键以显示自己/准星对准的实体的胸腔属性",
@@ -629,6 +653,7 @@
     "mrqx_extra_pack.tooltips.re_active_pill.2": "激活后，随机选取胸腔中的一个§e唯一激活§r器官，再次触发其唯一激活效果，对部分效果无效",
     "mrqx_extra_pack.tooltips.re_active_pill_moderation.1": "代价小了点",
     "mrqx_extra_pack.tooltips.re_active_pill_moderation.2": "激活后，随机触发胸腔中5个非§e唯一激活§r器官的激活效果",
+    "mrqx_extra_pack.tooltips.reactor_chamber.1": "反应时，根据§c核能动力§r等级持续提升体温",
     "mrqx_extra_pack.tooltips.recorder.1": "我来到，我看见，我记录",
     "mrqx_extra_pack.tooltips.recorder.2": "使你记录击杀过的生物，对该类生物的伤害+(√击杀次数)%",
     "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.1": "“别急别急，人人有份~”",
@@ -723,6 +748,10 @@
     "mrqx_extra_pack.tooltips.sin_superbia_lucifer.4": "§4集齐七原罪，效果将变为两倍或获得升级§r",
     "mrqx_extra_pack.tooltips.solar_mirror.1": "映射耀阳之光",
     "mrqx_extra_pack.tooltips.solar_mirror.2": "攻击时，根据阳光及月光在此处的强度及§6天体§r器官数造成额外的§c灼燃损伤§r",
+    "mrqx_extra_pack.tooltips.solar_mirror.3": "根据阳光及月光在此处的强度缓慢提升体温",
+    "mrqx_extra_pack.tooltips.soul_of_emerald_pickaxe.1": "……什么声音？是错觉吗？",
+    "mrqx_extra_pack.tooltips.soul_of_emerald_pickaxe.2": "挖掘迷宫/城堡类方块时，进行一次范围巨大、不消耗手持工具耐久的连锁挖掘",
+    "mrqx_extra_pack.tooltips.soul_of_emerald_pickaxe.3": "每个方块使冷却时间+1s",
     "mrqx_extra_pack.tooltips.spine_abyssal_intuition.1": "“啊，麻烦来了。”",
     "mrqx_extra_pack.tooltips.spine_abyssal_intuition.2": "激活后，每有一个§1深海§r器官，神经效率+1",
     "mrqx_extra_pack.tooltips.spine_abyssal_intuition.3": "如果集齐所有种类的§1深海§r器官，上述加成翻倍",
@@ -735,6 +764,7 @@
     "mrqx_extra_pack.tooltips.spleen_paper_written.1": "奇迹般地，存在于纸面上的数据成为了事实",
     "mrqx_extra_pack.tooltips.starry_sky_prism.1": "星之影",
     "mrqx_extra_pack.tooltips.starry_sky_prism.2": "晚上时，根据月相获得不同增益效果，§6天体§r器官数提供效果等级",
+    "mrqx_extra_pack.tooltips.starry_sky_prism.3": "在§5暮色森林§r中获得全部增益",
     "mrqx_extra_pack.tooltips.steam_armor.1": "刀剑之下，金属光泽愈发明亮",
     "mrqx_extra_pack.tooltips.steam_armor.2": "每点§f蒸汽计数§r提供2%减伤（每个蒸汽甲胄最大提供20%）",
     "mrqx_extra_pack.tooltips.steam_engine.1": "从历史的尘埃中，它恢复了动力",
@@ -778,17 +808,28 @@
     "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.4": "注意：狼为未驯服状态",
     "mrqx_extra_pack.tooltips.thermal_barrier.1": "升温！升温！升温！",
     "mrqx_extra_pack.tooltips.thermal_barrier.2": "反应开始时，将§c核能动力§r的效果等级提升1级，并降低§e20%§r的时长",
-    "mrqx_extra_pack.tooltips.thermal_barrier.3": "必须与§e反应舱室§r相邻",
+    "mrqx_extra_pack.tooltips.thermal_barrier.3": "反应时，根据§c核能动力§r等级持续提升体温",
+    "mrqx_extra_pack.tooltips.thermal_barrier.4": "必须与§e反应舱室§r相邻",
     "mrqx_extra_pack.tooltips.thermal_injector.1": "是谁想到这点子的？！",
-    "mrqx_extra_pack.tooltips.thermal_injector.2": "若有§c核能动力§r效果，攻击伤害增加§e效果等级×40%§r，并额外造成等同于增加值的§c灼燃损伤§r",
-    "mrqx_extra_pack.tooltips.thermal_injector.3": "根据造成的伤害减少效果时长，如果时长减至0，则立即移除§e裂变反应堆§r的冷却时间",
+    "mrqx_extra_pack.tooltips.thermal_injector.2": "若有§c核能动力§r效果，攻击伤害增加§e(效果等级×40 + 体温)%§r，并额外造成等同于增加值的§c灼燃损伤§r",
+    "mrqx_extra_pack.tooltips.thermal_injector.3": "根据造成的伤害减少效果时长与体温，如果时长减至0，则立即移除§e裂变反应堆§r的冷却时间",
     "mrqx_extra_pack.tooltips.thermal_injector.4": "必须与§e反应舱室§r相邻",
     "mrqx_extra_pack.tooltips.tianshi_yi.1": "谷种入田野，又是一个好时节",
     "mrqx_extra_pack.tooltips.tianshi_yi.2": "根据§7算力§r持续催熟自身所在格及与其相连的农作物",
     "mrqx_extra_pack.tooltips.tumor_mutagen.1": "饮用后随机将胸腔中的一个§e无形肿瘤§r转化为§e恶性肿瘤§r",
     "mrqx_extra_pack.tooltips.tumor_mutagen.2": "§e恶性肿瘤§r的数值较原来会有一定提升，但存在副作用",
+    "mrqx_extra_pack.tooltips.vacuum_freezer.1": "一个“冷”笑话",
+    "mrqx_extra_pack.tooltips.vacuum_freezer.2": "每秒消耗一定资源点使体温降低，§7算力§r决定效率",
+    "mrqx_extra_pack.tooltips.warp_capacitance.1": "只是充放电",
+    "mrqx_extra_pack.tooltips.warp_capacitance.2": "若扭曲值百分比高于资源值百分比，则持续消耗扭曲值提高资源值",
+    "mrqx_extra_pack.tooltips.warp_capacitance.3": "若资源值百分比高于扭曲值百分比，则持续消耗资源值提高扭曲值",
+    "mrqx_extra_pack.tooltips.warp_capacitance.4": "§7算力§r决定效率",
+    "mrqx_extra_pack.tooltips.warp_capacitance.5": "激活后,资源值上限+50，扭曲值上限+50",
     "mrqx_extra_pack.tooltips.warp_electrical_box.1": "扭曲的统一",
     "mrqx_extra_pack.tooltips.warp_electrical_box.2": "将§6资源值§r上限和§5扭曲值§r上限均分并+25",
+    "mrqx_extra_pack.tooltips.warp_entropy_change_machine.1": "不正常的转变",
+    "mrqx_extra_pack.tooltips.warp_entropy_change_machine.2": "每秒消耗一定的体温/扭曲值，提高扭曲值/体温",
+    "mrqx_extra_pack.tooltips.warp_entropy_change_machine.3": "按下主动技能按键以切换模式，§7算力§r决定效率",
     "mrqx_extra_pack.tooltips.warrior_output_high.1": "“十倍烈火刀刀爆”",
     "mrqx_extra_pack.tooltips.warrior_output_high.2": "造成的伤害锁定为主手物品攻击伤害加成的十倍，同时附带燃烧和爆炸",
     "mrqx_extra_pack.tooltips.white_hole.1": "喷吐万物",
