--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -635,8 +635,8 @@
     "mrqx_extra_pack.tooltips.paper_written.2": "体温较高时在雨中、水中数值更不容易减少，体温较低时在燃烧状态、火中、岩浆中数值更不容易减少",
     "mrqx_extra_pack.tooltips.phantom_heart.1": "Kids are cruel,and I'm very in touch with my inner child.",
     "mrqx_extra_pack.tooltips.phantom_heart.2": "§e杰出赞助者：索多玛浪人§r",
-    "mrqx_extra_pack.tooltips.phantom_heart.3": "按下主动技能按键时，若扭曲值大于60，则消耗所有扭曲值获得§c恶魔化·灭杀§r效果；否则消耗至多40资源点增加等量扭曲值。冷却时间30s",
-    "mrqx_extra_pack.tooltips.phantom_heart.4": "每点力量、神经效率提供+10s持续时间与冷却时间，每个§6烈焰§r/§b魔法§r/§1深海§r/§4七原罪§r器官提供+1效果等级",
+    "mrqx_extra_pack.tooltips.phantom_heart.3": "按下主动技能按键时，若扭曲值大于60，则消耗60扭曲值获得§c恶魔化·灭杀§r效果；否则消耗至多40资源点增加等量扭曲值。冷却时间30s",
+    "mrqx_extra_pack.tooltips.phantom_heart.4": "每点力量、神经效率提供+5s持续时间与+10s冷却时间，每个§6烈焰§r/§b魔法§r/§1深海§r/§4七原罪§r器官提供+1效果等级和+100%持续时间",
     "mrqx_extra_pack.tooltips.phantom_heart.5": "每级§c恶魔化·灭杀§r提供+200最大法力值，+20%冷却缩减，+20%攻击伤害，+20%法术强度",
     "mrqx_extra_pack.tooltips.phantom_heart.6": "持有§c恶魔化·灭杀§r时造成伤害，将有20%概率施加1min§c切割§r和§c致命伤§r效果（已有则等级+1）",
     "mrqx_extra_pack.tooltips.phantom_heart.7": "激活后，-50%最大生命值。若玩家的扭曲值大于120，每秒钟扣除200法力值并给予玩家生命提升X",
