--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -26,18 +26,24 @@
     "item.mrqx_extra_pack.automatic_wax_protector": "自动蜡护仪",
     "item.mrqx_extra_pack.basic_uncoded_cpu": "基础未编码处理器",
     "item.mrqx_extra_pack.black_hole": "黑洞",
+    "item.mrqx_extra_pack.blazing_sun": "“耀阳”",
+    "item.mrqx_extra_pack.broken_knight_shield": "损坏骑士盾",
+    "item.mrqx_extra_pack.broken_knight_sword": "损坏骑士剑",
     "item.mrqx_extra_pack.broken_sun": "残阳",
     "item.mrqx_extra_pack.buring_blood_active_fire_dragon_bead": "激活·火龙宝玉·炽血化",
+    "item.mrqx_extra_pack.candy_sugary_cpu": "糖果“甜腻”处理器",
     "item.mrqx_extra_pack.celestial_body_astrology_cpu": "天体“占星”处理器",
     "item.mrqx_extra_pack.charged_blade": "充能刀刃",
     "item.mrqx_extra_pack.chocolate_coinage_machine": "‌巧克力铸币机",
     "item.mrqx_extra_pack.command_spell_book": "指令魔法书",
     "item.mrqx_extra_pack.command_spell_core": "指令施法核心",
     "item.mrqx_extra_pack.compressed_biscuit": "压缩饼干",
+    "item.mrqx_extra_pack.core_of_knights": "骑士核心",
     "item.mrqx_extra_pack.cpu": "处理器",
     "item.mrqx_extra_pack.crispy_belly": "脆肚",
     "item.mrqx_extra_pack.dark_sun_seed": "暗日种子",
     "item.mrqx_extra_pack.divine_pen": "神之笔",
+    "item.mrqx_extra_pack.dragon_long_cpu": "龙化“神龙”处理器",
     "item.mrqx_extra_pack.energy_core": "能量核心",
     "item.mrqx_extra_pack.enriched_ore_cluster_precipitation_membrane": "富集矿簇析出膜",
     "item.mrqx_extra_pack.eternal_wing_of_soul": "永恒灵魂之翼",
@@ -77,6 +83,12 @@
     "item.mrqx_extra_pack.kings_fellowship": "国王的护戒",
     "item.mrqx_extra_pack.kings_new_lance": "国王的新枪",
     "item.mrqx_extra_pack.kings_staff": "国王的枝条",
+    "item.mrqx_extra_pack.knight_armor_piece": "骑士装甲板",
+    "item.mrqx_extra_pack.knight_chain_hammer": "骑士链锤",
+    "item.mrqx_extra_pack.knight_chain_hammer_of_annihilation": "湮灭链锤",
+    "item.mrqx_extra_pack.knight_metal_plate": "骑士金属板",
+    "item.mrqx_extra_pack.knight_shield": "骑士盾",
+    "item.mrqx_extra_pack.knight_sword": "骑士剑",
     "item.mrqx_extra_pack.liver_antimatter": "反物质肝",
     "item.mrqx_extra_pack.liver_paper": "纸肝",
     "item.mrqx_extra_pack.liver_paper_written": "书写过的纸肝",
@@ -134,6 +146,7 @@
     "item.mrqx_extra_pack.origin_sin": "‌原罪·罪源",
     "item.mrqx_extra_pack.pancreas_group_hunting": "“集群狩猎”胰",
     "item.mrqx_extra_pack.phantom_heart": "幻魔心脏",
+    "item.mrqx_extra_pack.phantom_knight_armor": "幻影骑士甲",
     "item.mrqx_extra_pack.pineapple_shrimp_fried_rice": "菠萝虾仁炒饭",
     "item.mrqx_extra_pack.portable_medical_checkup_device": "便携式体检仪",
     "item.mrqx_extra_pack.prison_soul": "死狱之魂",
@@ -144,6 +157,7 @@
     "item.mrqx_extra_pack.reactor_chamber": "反应舱室",
     "item.mrqx_extra_pack.recorder": "‌“记录者”",
     "item.mrqx_extra_pack.residual_breath_of_dead_soul": "§c灵魂奥秘·死魂灵的余息§r",
+    "item.mrqx_extra_pack.resolute_knight_shield": "坚毅骑士盾",
     "item.mrqx_extra_pack.rib_antimatter": "反物质肋骨",
     "item.mrqx_extra_pack.rib_paper": "纸肋骨",
     "item.mrqx_extra_pack.rib_paper_written": "书写过的纸肋骨",
@@ -206,6 +220,7 @@
     "item.mrqx_extra_pack.tianshi_yi": "天师仪",
     "item.mrqx_extra_pack.tumor_mutagen": "肿瘤诱变剂",
     "item.mrqx_extra_pack.uranium": "铀",
+    "item.mrqx_extra_pack.useless_ring": "无用的圆环",
     "item.mrqx_extra_pack.vacuum_freezer": "真空冷冻机",
     "item.mrqx_extra_pack.warp_capacitance": "扭曲电容",
     "item.mrqx_extra_pack.warp_electrical_box": "扭曲变电箱",
@@ -359,13 +374,19 @@
     "mrqx_extra_pack.tooltips.appendix_paper_written.1": "奇迹般地，存在于纸面上的数据成为了事实",
     "mrqx_extra_pack.tooltips.artificial_mineral_cluster.1": "只是把一些矿物混合在了一起",
     "mrqx_extra_pack.tooltips.aurora_active_ice_dragon_bead.1": "它在你手里映射极光",
-    "mrqx_extra_pack.tooltips.aurora_active_ice_dragon_bead.2": "造成伤害时，额外造成(-伤害值×体温)的§b冻结损伤§r",
+    "mrqx_extra_pack.tooltips.aurora_active_ice_dragon_bead.2": "造成伤害时，额外造成(-伤害值 × 体温)的§b冻结损伤§r",
     "mrqx_extra_pack.tooltips.automatic_wax_protector.1": "防水性能++",
     "mrqx_extra_pack.tooltips.automatic_wax_protector.2": "激活后，根据胸腔中的§e蜜脾§r数量提供对书写过的§f纸§r器官的防护",
     "mrqx_extra_pack.tooltips.automatic_wax_protector.3": "§e蜜脾§r数量达到64时，书写过的§f纸§r器官将得到对水的完全防护；达到256时，书写过的§f纸§r器官将得到对火的完全防护；达到1024时，书写过的§f纸§r器官将得到对岩浆的完全防护",
     "mrqx_extra_pack.tooltips.basic_uncoded_cpu.1": "只有一本简易的说明书",
     "mrqx_extra_pack.tooltips.black_hole.1": "吞噬万物",
     "mrqx_extra_pack.tooltips.black_hole.2": "按下主动技能按键，持续吸引周围生物，§6天体§r器官数提供力度和范围",
+    "mrqx_extra_pack.tooltips.blazing_sun.1": "骑士，应具有荣誉与英勇……",
+    "mrqx_extra_pack.tooltips.blazing_sun.2": "“手执威光，便是为了扫尽世间恶行。”",
+    "mrqx_extra_pack.tooltips.blazing_sun.3": "使造成的伤害+20%，若敌人距离自身小于3格，则使此次伤害变为真实伤害",
+    "mrqx_extra_pack.tooltips.blazing_sun.4": "§3强化：攻击时对周围3格内所有非玩家生物造成(攻击力 × 20%)的真实伤害§r",
+    "mrqx_extra_pack.tooltips.broken_knight_shield.1": "使受到的伤害-5%",
+    "mrqx_extra_pack.tooltips.broken_knight_sword.1": "使造成的伤害+5%",
     "mrqx_extra_pack.tooltips.broken_sun.1": "Broken sun,",
     "mrqx_extra_pack.tooltips.broken_sun.2": "Shedding light on everyone",
     "mrqx_extra_pack.tooltips.broken_sun.3": "Broken sun,",
@@ -374,7 +395,11 @@
     "mrqx_extra_pack.tooltips.broken_sun.6": "I won't let you go dark",
     "mrqx_extra_pack.tooltips.broken_sun.7": "持续给予周围玩家§e生命恢复§rV，§e力量§rIV，§e抗性提升§rIII，§e速度§rII，§e夜视§r，§6天体§r器官数提供范围",
     "mrqx_extra_pack.tooltips.buring_blood_active_fire_dragon_bead.1": "它在你手里愈加炙热",
-    "mrqx_extra_pack.tooltips.buring_blood_active_fire_dragon_bead.2": "造成伤害时，额外造成(伤害值×体温)的§c灼燃损伤§r",
+    "mrqx_extra_pack.tooltips.buring_blood_active_fire_dragon_bead.2": "造成伤害时，额外造成(伤害值 × 体温)的§c灼燃损伤§r",
+    "mrqx_extra_pack.tooltips.candy_sugary_cpu.1": "指令：多糖水解",
+    "mrqx_extra_pack.tooltips.candy_sugary_cpu.2": "牙齿掉了",
+    "mrqx_extra_pack.tooltips.candy_sugary_cpu.3": "激活后，每点§7算力§r提供+1§f糖果§r器官个数",
+    "mrqx_extra_pack.tooltips.candy_sugary_cpu.4": "每个§f糖果§r器官提供+1§7算力§r§c（此效果唯一）§r",
     "mrqx_extra_pack.tooltips.celestial_body_astrology_cpu.1": "指令：星体重构",
     "mrqx_extra_pack.tooltips.celestial_body_astrology_cpu.2": "就像星星一样，指引人们前行",
     "mrqx_extra_pack.tooltips.celestial_body_astrology_cpu.3": "激活后，每点§7算力§r提供+1§6天体§r器官个数",
@@ -388,17 +413,23 @@
     "mrqx_extra_pack.tooltips.command_spell_core.2": "激活后，法术强度+100%",
     "mrqx_extra_pack.tooltips.compressed_biscuit.1": "这不是毛巾，是压缩饼干，你把它打开，放在肚里，饥饿值变大变高……",
     "mrqx_extra_pack.tooltips.compressed_biscuit.2": "食用食物时，根据胸腔中§6食物§r器官的数量，少量增幅获得的饥饿值、饱和度",
+    "mrqx_extra_pack.tooltips.core_of_knights.1": "骑士精神的凝结",
+    "mrqx_extra_pack.tooltips.core_of_knights.2": "激活后，胸腔中每有一个§e国王§r器官，自身攻击伤害、最大生命值、盔甲值+10%，并触发一次部分§3骑士§r器官的§3强化§r效果",
     "mrqx_extra_pack.tooltips.cpu.1": "“检测到无效指令，正在使用默认指令：通用计算”",
     "mrqx_extra_pack.tooltips.cpu.2": "每有一个§e处理器§r器官，§7算力§r+1",
     "mrqx_extra_pack.tooltips.crispy_belly.1": "脆肚好吃",
     "mrqx_extra_pack.tooltips.crispy_belly.2": "……翠杜？",
     "mrqx_extra_pack.tooltips.dark_sun_seed.1": "暗无天日",
     "mrqx_extra_pack.tooltips.dark_sun_seed.2": "激活后，按键技能的伤害乘以§e(光合 ÷ (护甲值 + 1) × 扭曲值 × 0.1)§r",
-    "mrqx_extra_pack.tooltips.dark_sun_seed.3": "按下主动技能按键，持续释放辐射，对附近的其他生物持续造成(攻击力2%×§6天体§r器官个数)且无视无敌时间的真实伤害",
+    "mrqx_extra_pack.tooltips.dark_sun_seed.3": "按下主动技能按键，持续释放辐射，对附近的其他生物持续造成(攻击力2% × §6天体§r器官个数)且无视无敌时间的真实伤害",
     "mrqx_extra_pack.tooltips.divine_pen.1": "造物主以此书写万物",
     "mrqx_extra_pack.tooltips.divine_pen.2": "主手持纸器官，副手持铁魔法的墨水右键，将对应的可书写数据写入该器官",
     "mrqx_extra_pack.tooltips.divine_pen.3": "墨水的稀有度越高，自身的胸腔属性越高，写入的属性越高",
     "mrqx_extra_pack.tooltips.divine_pen.4": "如果胸腔中存在§f纸§r器官，则无法进行书写",
+    "mrqx_extra_pack.tooltips.dragon_long_cpu.1": "指令：神龙庇佑",
+    "mrqx_extra_pack.tooltips.dragon_long_cpu.2": "如果你是龙",
+    "mrqx_extra_pack.tooltips.dragon_long_cpu.3": "激活后，每点§7算力§r提供+1§d龙§r器官个数",
+    "mrqx_extra_pack.tooltips.dragon_long_cpu.4": "每个§d龙§r器官提供+1§7算力§r§c（此效果唯一）§r",
     "mrqx_extra_pack.tooltips.energy_core.1": "借助世界框架中的奥秘之力，你找到了资源值存储的最终方案……",
     "mrqx_extra_pack.tooltips.energy_core.2": "激活后，§6资源值§r上限增加21亿",
     "mrqx_extra_pack.tooltips.enriched_ore_cluster_precipitation_membrane.1": "看上去……像个肺？",
@@ -493,6 +524,20 @@
     "mrqx_extra_pack.tooltips.kings_new_lance.2": "生命值小于等于1时，攻击速度+100%",
     "mrqx_extra_pack.tooltips.kings_staff.1": "放下无用的威仪，以恩慈待人",
     "mrqx_extra_pack.tooltips.kings_staff.2": "生命值小于等于1时，每秒回复100法力值",
+    "mrqx_extra_pack.tooltips.knight_chain_hammer.1": "破坏性的一击",
+    "mrqx_extra_pack.tooltips.knight_chain_hammer.2": "按下主动技能按键，向前投掷一枚链锤（根据§3骑士§r器官个数获得强化），冷却1s",
+    "mrqx_extra_pack.tooltips.knight_chain_hammer.3": "激活后，暴击伤害、暴击概率+50%",
+    "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.1": "骑士，应具有牺牲与公正",
+    "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.2": "“这是我最后的一击，去死吧——”",
+    "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.3": "造成伤害时有10%概率在目标处召唤一枚湮灭立方，之后其将缓慢向自身靠近，伤害沿途的生物，毁灭沿途的方块；攻击湮灭立方附近的目标时取消其无敌时间",
+    "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.4": "§3强化：造成伤害时有10%的概率召唤额外的湮灭立方§r",
+    "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.5": "激活后，暴击伤害、暴击概率+100%",
+    "mrqx_extra_pack.tooltips.knight_metal_plate.1": "骑士的最近防护用具",
+    "mrqx_extra_pack.tooltips.knight_metal_plate.2": "受到伤害时，每点防御（胸腔数值）使伤害-1%（不超过体内§3骑士§r器官个数）",
+    "mrqx_extra_pack.tooltips.knight_shield.1": "骑士的左手",
+    "mrqx_extra_pack.tooltips.knight_shield.2": "使受到的伤害-10%",
+    "mrqx_extra_pack.tooltips.knight_sword.1": "骑士的右手",
+    "mrqx_extra_pack.tooltips.knight_sword.2": "使造成的伤害+10%",
     "mrqx_extra_pack.tooltips.liver_paper.1": "可书写：解毒效率、火焰抗性、头颅子弹",
     "mrqx_extra_pack.tooltips.liver_paper_written.1": "奇迹般地，存在于纸面上的数据成为了事实",
     "mrqx_extra_pack.tooltips.liver_tide_observation.1": "“海流会追索脆弱的生命。”",
@@ -554,7 +599,7 @@
     "mrqx_extra_pack.tooltips.malignant_tumor.4": "则将其覆盖为一个§2恶性肿瘤§r或§2无形肿瘤§r（概率相等），属性为本器官50%~75%",
     "mrqx_extra_pack.tooltips.malignant_tumor.5": "特别地，§e健康§r属性每次至少减少2",
     "mrqx_extra_pack.tooltips.marenol.1": "建议用量：1mg/次",
-    "mrqx_extra_pack.tooltips.marenol.2": "激活后，攻击敌人时，伤害增加§c噩梦指数§r×10%",
+    "mrqx_extra_pack.tooltips.marenol.2": "激活后，攻击敌人时，伤害增加§c噩梦指数§r × 10%",
     "mrqx_extra_pack.tooltips.marenol.3": "并有10%的概率将敌人的负面效果转移至自身（相同效果等级相加，持续时间相加）",
     "mrqx_extra_pack.tooltips.marenol.4": "根据自身所拥有的负面效果计算§c噩梦指数§r",
     "mrqx_extra_pack.tooltips.marenol.5": "§c噩梦指数§r=§e所有负面效果等级之和 × 你的扭曲值 × 0.1§r",
@@ -589,6 +634,7 @@
     "mrqx_extra_pack.tooltips.mrqx_cpu": "处理器",
     "mrqx_extra_pack.tooltips.mrqx_element_damage": "元素损伤",
     "mrqx_extra_pack.tooltips.mrqx_king": "国王",
+    "mrqx_extra_pack.tooltips.mrqx_knight": "骑士",
     "mrqx_extra_pack.tooltips.mrqx_nuclear": "核能",
     "mrqx_extra_pack.tooltips.mrqx_obtain_effect": "状态效果",
     "mrqx_extra_pack.tooltips.mrqx_obtain_effect_only": "唯一状态效果",
@@ -640,6 +686,12 @@
     "mrqx_extra_pack.tooltips.phantom_heart.5": "每级§c恶魔化·灭杀§r提供+200最大法力值，+20%冷却缩减，+20%攻击伤害，+20%法术强度",
     "mrqx_extra_pack.tooltips.phantom_heart.6": "持有§c恶魔化·灭杀§r时造成伤害，将有20%概率施加1min§c切割§r和§c致命伤§r效果（已有则等级+1）",
     "mrqx_extra_pack.tooltips.phantom_heart.7": "激活后，-50%最大生命值。若玩家的扭曲值大于120，每秒钟扣除200法力值并给予玩家生命提升X",
+    "mrqx_extra_pack.tooltips.phantom_knight_armor.1": "骑士，应具有谦卑与灵性……",
+    "mrqx_extra_pack.tooltips.phantom_knight_armor.2": "“哪怕身死，灵魂也仍坚守信条”",
+    "mrqx_extra_pack.tooltips.phantom_knight_armor.3": "受到伤害时，每点防御（胸腔数值）使伤害-2%（不超过体内§3骑士§r器官个数）",
+    "mrqx_extra_pack.tooltips.phantom_knight_armor.4": "造成伤害时，有12.5%的概率使这次伤害无视护甲",
+    "mrqx_extra_pack.tooltips.phantom_knight_armor.5": "§3强化：受伤时每点防御（胸腔数值）额外使伤害-1%，且使这次伤害失去穿甲特性§r",
+    "mrqx_extra_pack.tooltips.phantom_knight_armor.6": "激活后，将漂浮（胸腔数值）重设为2.9",
     "mrqx_extra_pack.tooltips.pineapple_shrimp_fried_rice.1": "§8一道未完成的菜",
     "mrqx_extra_pack.tooltips.pineapple_shrimp_fried_rice.2": "§8致一位已过世的友人",
     "mrqx_extra_pack.tooltips.portable_medical_checkup_device.1": "长按右键以显示自己/准星对准的实体的胸腔属性",
@@ -659,6 +711,11 @@
     "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.1": "“别急别急，人人有份~”",
     "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.2": "§e魂灵残影：每隔一段时间，随机攻击附近一位怪物，造成少量魔法伤害、0.5s缓慢IV、永久§c魂灵残影§e（已有§c魂灵残影§e则等级+1）§r",
     "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.3": "§e破灭魂灵：攻击带有§c魂灵残影§e的敌人时，有30%概率消耗§c魂灵残影§e，造成小范围爆炸及范围魔法伤害（伤害值与§c魂灵残影§e等级成正比）。如果装备了超过三个§c灵魂奥秘·死魂灵的余息§e则升级为§c爆裂黎明§e，造成大范围爆炸及范围普通+魔法伤害（伤害值与§c魂灵残影§e等级成正比）§r",
+    "mrqx_extra_pack.tooltips.resolute_knight_shield.1": "骑士，应具有怜悯与诚实……",
+    "mrqx_extra_pack.tooltips.resolute_knight_shield.2": "“以§k史蒂夫§r的名义起誓！”",
+    "mrqx_extra_pack.tooltips.resolute_knight_shield.3": "使受到的伤害-20%，并随机使此次伤害无法§e无视护甲§r/§e无视状态效果§r/§e无视附魔§r",
+    "mrqx_extra_pack.tooltips.resolute_knight_shield.4": "若该次为§e投掷物§r/§e爆炸§r伤害，则随机两次；若该次伤害§e无视伤害免疫§r，则不会生效",
+    "mrqx_extra_pack.tooltips.resolute_knight_shield.5": "§3强化：潜行时额外使受到的伤害-20%§r",
     "mrqx_extra_pack.tooltips.rib_paper.1": "可书写：防御、冲击抗性、熔炉之力、铁修复",
     "mrqx_extra_pack.tooltips.rib_paper_written.1": "奇迹般地，存在于纸面上的数据成为了事实",
     "mrqx_extra_pack.tooltips.rib_the_pressure_to_survive.1": "“来吧，再多些，再多些！”",
@@ -776,11 +833,11 @@
     "mrqx_extra_pack.tooltips.steam_power_cpu.3": "激活后，每点§7算力§r提供+1§f蒸汽§r器官个数",
     "mrqx_extra_pack.tooltips.steam_power_cpu.4": "每个§f蒸汽§r器官提供+1§7算力§r§c（此效果唯一）§r",
     "mrqx_extra_pack.tooltips.steam_power_engine.1": "时光飞逝，它仍在转动",
-    "mrqx_extra_pack.tooltips.steam_power_engine.2": "胸腔中有§e蒸汽引擎§r时，手持水瓶右键，将§c熔火§r/§c心火§r转变为相同等级、时长的§f蒸汽动力§r（已有则等级+1、增加时长，等级上限为§f蒸汽§r器官个数+2，时长上限为等级×2分钟）",
+    "mrqx_extra_pack.tooltips.steam_power_engine.2": "胸腔中有§e蒸汽引擎§r时，手持水瓶右键，将§c熔火§r/§c心火§r转变为相同等级、时长的§f蒸汽动力§r（已有则等级+1、增加时长，等级上限为§f蒸汽§r器官个数+2，时长上限为等级 × 2分钟）",
     "mrqx_extra_pack.tooltips.steam_power_turbine.1": "改造之后，它适应了新时代",
-    "mrqx_extra_pack.tooltips.steam_power_turbine.2": "胸腔中有§e蒸汽引擎§r时，手持水桶右键，将§c核能动力§r转变为双倍等级、相同时长的§f蒸汽动力§r（已有则等级+2、大幅增加时长，等级上限为§f蒸汽§r器官个数×2+3，时长上限为等级×2分钟）",
+    "mrqx_extra_pack.tooltips.steam_power_turbine.2": "胸腔中有§e蒸汽引擎§r时，手持水桶右键，将§c核能动力§r转变为双倍等级、相同时长的§f蒸汽动力§r（已有则等级+2、大幅增加时长，等级上限为§f蒸汽§r器官个数 × 2+3，时长上限为等级 × 2分钟）",
     "mrqx_extra_pack.tooltips.steam_rapier.1": "高压蒸汽形成的火焰长剑",
-    "mrqx_extra_pack.tooltips.steam_rapier.2": "每点§f蒸汽计数§r提供5%增伤，并额外造成(伤害×§f蒸汽计数§r×0.1)的§c灼燃损伤§r",
+    "mrqx_extra_pack.tooltips.steam_rapier.2": "每点§f蒸汽计数§r提供5%增伤，并额外造成(伤害 × §f蒸汽计数§r × 0.1)的§c灼燃损伤§r",
     "mrqx_extra_pack.tooltips.steam_supercharge_engine.1": "压力加倍",
     "mrqx_extra_pack.tooltips.steam_supercharge_engine.2": "按下主动技能按键，获得与§f蒸汽计数§r相同等级的§f蒸汽增压§r，期间攻击力、盔甲韧性、速度大幅提升，但在结束时会短暂眩晕",
     "mrqx_extra_pack.tooltips.steam_turbine.1": "发电的本质就是烧开水",
@@ -811,13 +868,14 @@
     "mrqx_extra_pack.tooltips.thermal_barrier.3": "反应时，根据§c核能动力§r等级持续提升体温",
     "mrqx_extra_pack.tooltips.thermal_barrier.4": "必须与§e反应舱室§r相邻",
     "mrqx_extra_pack.tooltips.thermal_injector.1": "是谁想到这点子的？！",
-    "mrqx_extra_pack.tooltips.thermal_injector.2": "若有§c核能动力§r效果，攻击伤害增加§e(效果等级×40 + 体温)%§r，并额外造成等同于增加值的§c灼燃损伤§r",
+    "mrqx_extra_pack.tooltips.thermal_injector.2": "若有§c核能动力§r效果，攻击伤害增加§e(效果等级 × 40 + 体温)%§r，并额外造成等同于增加值的§c灼燃损伤§r",
     "mrqx_extra_pack.tooltips.thermal_injector.3": "根据造成的伤害减少效果时长与体温，如果时长减至0，则立即移除§e裂变反应堆§r的冷却时间",
     "mrqx_extra_pack.tooltips.thermal_injector.4": "必须与§e反应舱室§r相邻",
     "mrqx_extra_pack.tooltips.tianshi_yi.1": "谷种入田野，又是一个好时节",
     "mrqx_extra_pack.tooltips.tianshi_yi.2": "根据§7算力§r持续催熟自身所在格及与其相连的农作物",
     "mrqx_extra_pack.tooltips.tumor_mutagen.1": "饮用后随机将胸腔中的一个§e无形肿瘤§r转化为§e恶性肿瘤§r",
     "mrqx_extra_pack.tooltips.tumor_mutagen.2": "§e恶性肿瘤§r的数值较原来会有一定提升，但存在副作用",
+    "mrqx_extra_pack.tooltips.useless_ring.1": "激活后，暴击伤害、暴击概率+10%",
     "mrqx_extra_pack.tooltips.vacuum_freezer.1": "一个“冷”笑话",
     "mrqx_extra_pack.tooltips.vacuum_freezer.2": "每秒消耗一定资源点使体温降低，§7算力§r决定效率",
     "mrqx_extra_pack.tooltips.warp_capacitance.1": "只是充放电",
@@ -839,6 +897,7 @@
     "mrqx_extra_pack.tooltips.withered_nether_star_shard.1": "The Start of the Worlds Impending Doom……",
     "mrqx_extra_pack.tooltips.withered_nether_star_shard.2": "造成伤害时，额外造成(伤害值 × 胸腔凋零化数值)的§0凋亡损伤§r",
     "mrqx_extra_pack.tooltips.worn_out_steam_engine.1": "……修一修没准还能用",
+    "spell.mrqx_extra_pack.earth_without_earth": "悬根定松图",
     "tetra.material.mrqx_active_ender_dragon_bead": "激活·末影龙宝玉",
     "tetra.material.mrqx_active_ender_dragon_bead.prefix": "激活·末影龙宝玉",
     "tetra.material.mrqx_active_fire_dragon_bead": "激活·火龙宝玉",
