--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -230,6 +230,7 @@
     "item.mrqx_extra_pack.wing_of_soul": "灵魂之翼",
     "item.mrqx_extra_pack.withered_nether_star_shard": "风暴之星碎片",
     "item.mrqx_extra_pack.worn_out_steam_engine": "‌破旧蒸汽引擎",
+    "item.mrqx_extra_pack.xiao_amburm": "销汀·桉柏",
     "itemGroup.kubejs.mrqxextrapack": "墨染琴弦的额外器官",
     "mrqx_extra_pack.advancements_check.mystery_craftsmanship": "你还没有探索§8工艺§r之奥秘的资格……（进度：%s%%）",
     "mrqx_extra_pack.advancements_check.mystery_disasters": "你还没有探索§5灾难§r之奥秘的资格……（进度：%s%%）",
@@ -256,7 +257,8 @@
     "mrqx_extra_pack.jei.mrqx_element_damage.4": "§9雷霆损伤§r达到100时，消耗100§9雷霆损伤§r使其额外受到100点雷电伤害（不致死，不受额外加成影响），并使其获得10s的§9眩晕§r、§9痉挛§r、§9箭矢磁吸§r",
     "mrqx_extra_pack.jei.mrqx_element_damage.5": "§0凋亡损伤§r达到100时，消耗100§0凋亡损伤§r使其额外受到100点凋零伤害（不致死，不受额外加成影响），并使其获得10s的§0凋零§r、§0凋零腐败§r、§0衰弱§r",
     "mrqx_extra_pack.jei.mrqx_element_damage.6": "单次伤害可触发多次损伤效果，状态效果的等级可叠加",
-    "mrqx_extra_pack.jei.mrqx_nuclear.1": "用于 §7核能§r器官反应",
+    "mrqx_extra_pack.jei.mrqx_nuclear.1": "用于§7核能§r器官反应",
+    "mrqx_extra_pack.jei.soul_of_emerald_pickaxe.1": "破坏迷宫/城堡类方块时，有1%概率掉落",
     "mrqx_extra_pack.mrqx_god_judgement": "神之惩戒",
     "mrqx_extra_pack.mrqx_mechanical_frenzy": "机械狂潮",
     "mrqx_extra_pack.mrqx_shadow_of_caerula_arbor": "深蓝之树之影",
@@ -897,6 +899,7 @@
     "mrqx_extra_pack.tooltips.withered_nether_star_shard.1": "The Start of the Worlds Impending Doom……",
     "mrqx_extra_pack.tooltips.withered_nether_star_shard.2": "造成伤害时，额外造成(伤害值 × 胸腔凋零化数值)的§0凋亡损伤§r",
     "mrqx_extra_pack.tooltips.worn_out_steam_engine.1": "……修一修没准还能用",
+    "mrqx_extra_pack.tooltips.xiao_amburm.1": "补药吃窝！",
     "spell.mrqx_extra_pack.earth_without_earth": "悬根定松图",
     "tetra.material.mrqx_active_ender_dragon_bead": "激活·末影龙宝玉",
     "tetra.material.mrqx_active_ender_dragon_bead.prefix": "激活·末影龙宝玉",
