--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -526,6 +526,8 @@
     "mrqx_extra_pack.tooltips.kings_new_lance.2": "生命值小于等于1时，攻击速度+100%",
     "mrqx_extra_pack.tooltips.kings_staff.1": "放下无用的威仪，以恩慈待人",
     "mrqx_extra_pack.tooltips.kings_staff.2": "生命值小于等于1时，每秒回复100法力值",
+    "mrqx_extra_pack.tooltips.knight_armor_piece.1": "骑士的防护用具",
+    "mrqx_extra_pack.tooltips.knight_armor_piece.2": "受到伤害时，每点防御（胸腔数值）使伤害-1%（不超过体内§3骑士§r器官个数）",
     "mrqx_extra_pack.tooltips.knight_chain_hammer.1": "破坏性的一击",
     "mrqx_extra_pack.tooltips.knight_chain_hammer.2": "按下主动技能按键，向前投掷一枚链锤（根据§3骑士§r器官个数获得强化），冷却1s",
     "mrqx_extra_pack.tooltips.knight_chain_hammer.3": "激活后，暴击伤害、暴击概率+50%",
@@ -534,8 +536,6 @@
     "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.3": "造成伤害时有10%概率在目标处召唤一枚湮灭立方，之后其将缓慢向自身靠近，伤害沿途的生物，毁灭沿途的方块；攻击湮灭立方附近的目标时取消其无敌时间",
     "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.4": "§3强化：造成伤害时有10%的概率召唤额外的湮灭立方§r",
     "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.5": "激活后，暴击伤害、暴击概率+100%",
-    "mrqx_extra_pack.tooltips.knight_metal_plate.1": "骑士的最近防护用具",
-    "mrqx_extra_pack.tooltips.knight_metal_plate.2": "受到伤害时，每点防御（胸腔数值）使伤害-1%（不超过体内§3骑士§r器官个数）",
     "mrqx_extra_pack.tooltips.knight_shield.1": "骑士的左手",
     "mrqx_extra_pack.tooltips.knight_shield.2": "使受到的伤害-10%",
     "mrqx_extra_pack.tooltips.knight_sword.1": "骑士的右手",
