--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -533,8 +533,8 @@
     "mrqx_extra_pack.tooltips.knight_chain_hammer.3": "激活后，暴击伤害、暴击概率+50%",
     "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.1": "骑士，应具有牺牲与公正",
     "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.2": "“这是我最后的一击，去死吧——”",
-    "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.3": "造成伤害时有10%概率在目标处召唤一枚湮灭立方，之后其将缓慢向自身靠近，伤害沿途的生物，毁灭沿途的方块；攻击湮灭立方附近的目标时取消其无敌时间",
-    "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.4": "§3强化：造成伤害时有10%的概率召唤额外的湮灭立方§r",
+    "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.3": "造成伤害时有10%概率在目标处召唤一枚湮灭立方，之后其将缓慢向自身靠近，伤害沿途的生物，毁灭沿途的方块；攻击湮灭立方附近的目标时造成真实伤害",
+    "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.4": "§3强化：攻击湮灭立方附近的目标时伤害增加(湮灭立方数 × 100)%§r",
     "mrqx_extra_pack.tooltips.knight_chain_hammer_of_annihilation.5": "激活后，暴击伤害、暴击概率+100%",
     "mrqx_extra_pack.tooltips.knight_shield.1": "骑士的左手",
     "mrqx_extra_pack.tooltips.knight_shield.2": "使受到的伤害-10%",
