--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -293,7 +293,7 @@
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.d0": "蒸汽动力：%s %s %s",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.d1": "蒸汽计数：%s",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.e": "蒸汽增压：%s %s",
-    "mrqx_extra_pack.tip.tip_0": "你已经安装了mrqx_extra_pack（墨染琴弦的拓展包），反馈bug时请注意问题的来源",
+    "mrqx_extra_pack.tip.tip_0": "你已经安装了mrqx_extra_pack（墨染琴弦的额外包），反馈bug时请注意问题的来源",
     "mrqx_extra_pack.tip.tip_1": "请勿携带偶数的反物质心脏",
     "mrqx_extra_pack.tip.tip_10": "反物质脾建议搭配灵魂鹫羽毛食用",
     "mrqx_extra_pack.tip.tip_11": "缺掉落物材料？冒险者证章，你值得拥有",
@@ -311,7 +311,16 @@
     "mrqx_extra_pack.tip.tip_22": "幽匿套是性能杀手",
     "mrqx_extra_pack.tip.tip_23": "脆肚好吃",
     "mrqx_extra_pack.tip.tip_24": "墨染琴弦是个鸽子",
+    "mrqx_extra_pack.tip.tip_25": "如果你添加了多个拓展包，你就可以左脚踩右脚踩左脚踩右脚……",
+    "mrqx_extra_pack.tip.tip_26": "许多器官已经不能从幸运方块里开出来了，所以省点钱吧",
+    "mrqx_extra_pack.tip.tip_27": "传说中只要集齐所有种类的法术，那么它们就会组成乐队逃走",
+    "mrqx_extra_pack.tip.tip_28": "加大剂量！村民从桌子上逃走了！",
+    "mrqx_extra_pack.tip.tip_29": "当你法强过高时，记得小心使用你的法术，并把手放到离施法按键远一些的地方",
     "mrqx_extra_pack.tip.tip_3": "复激活药丸并不能激活需要激活药的复激活药丸",
+    "mrqx_extra_pack.tip.tip_30": "遇到稀奇的生物了？那就打包带走吧",
+    "mrqx_extra_pack.tip.tip_31": "不要接触幸运方块，会变得不幸",
+    "mrqx_extra_pack.tip.tip_32": "还是PVP大佬",
+    "mrqx_extra_pack.tip.tip_33": "墨染的珍藏唱片目前仅能通过交易卷轴获得，所以记得给村民留几个活口",
     "mrqx_extra_pack.tip.tip_4": "在念完自然对数e的值前不要回家",
     "mrqx_extra_pack.tip.tip_5": "体内有某些深海器官时不要在村民交易所附近动手",
     "mrqx_extra_pack.tip.tip_6": "欸，你醒啦，等下就可以上餐桌啦",
@@ -428,6 +437,7 @@
     "mrqx_extra_pack.tooltips.divine_pen.2": "主手持纸器官，副手持铁魔法的墨水右键，将对应的可书写数据写入该器官",
     "mrqx_extra_pack.tooltips.divine_pen.3": "墨水的稀有度越高，自身的胸腔属性越高，写入的属性越高",
     "mrqx_extra_pack.tooltips.divine_pen.4": "如果胸腔中存在§f纸§r器官，则无法进行书写",
+    "mrqx_extra_pack.tooltips.dragon_egg.1": "当你被龙之灵魂缠绕时，你就有机会重复获得它……",
     "mrqx_extra_pack.tooltips.dragon_long_cpu.1": "指令：神龙庇佑",
     "mrqx_extra_pack.tooltips.dragon_long_cpu.2": "如果你是龙",
     "mrqx_extra_pack.tooltips.dragon_long_cpu.3": "激活后，每点§7算力§r提供+1§d龙§r器官个数",
